--- a/cn.zh-cn/用户指南/创建告警规则-4.md
+++ b/cn.zh-cn/用户指南/创建告警规则-4.md
@@ -1,23 +1,17 @@
-# 创建告警规则<a name="ZH-CN_TOPIC_0090332135"></a>
+# 创建告警规则<a name="ZH-CN_TOPIC_0084572213"></a>
 
-## 操作场景<a name="section86441647572"></a>
+本章节指导用户如何创建告警规则。
 
-本章节指导用户对已创建的站点进行告警规则的配置。
-
-## 前提条件<a name="section20144162617512"></a>
-
-已创建站点监控。
-
-## 操作步骤<a name="section1871314317518"></a>
+## 创建告警规则<a name="section62658995171654"></a>
 
 1.  登录管理控制台。
-2.  单击“管理与部署 \> 云监控 \> 站点监控”。
-3.  在“站点监控”界面，单击监控站点所在行的“创建告警规则”。
+2.  单击“管理与部署 \> 云监控”。
+3.  在“告警 \> 告警规则”界面，单击“创建告警规则”。
 4.  在“创建告警规则”界面，根据界面提示配置参数。
     1.  根据界面提示，配置规则信息参数。
 
         **图 1**  配置规则信息<a name="fig283216161388"></a>  
-        ![](figures/配置规则信息-2.png "配置规则信息-2")
+        ![](figures/配置规则信息-8.png "配置规则信息-8")
 
         **表 1**  配置规则信息
 
@@ -50,7 +44,7 @@
     2.  选择监控对象，配置告警内容参数。
 
         **图 2**  配置告警内容<a name="fig1674320252422"></a>  
-        ![](figures/配置告警内容-3.png "配置告警内容-3")
+        ![](figures/配置告警内容-9.png "配置告警内容-9")
 
         **表 2**  配置告警内容
 
@@ -63,40 +57,81 @@
         </th>
         </tr>
         </thead>
-        <tbody><tr id="row89519954220"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p9158953195713"><a name="p9158953195713"></a><a name="p9158953195713"></a>告警策略</p>
+        <tbody><tr id="row17949393429"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p19949592427"><a name="p19949592427"></a><a name="p19949592427"></a>资源类型</p>
         </td>
-        <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p191611753195714"><a name="p191611753195714"></a><a name="p191611753195714"></a>触发告警规则的告警策略。</p>
-        <p id="p1016285316576"><a name="p1016285316576"></a><a name="p1016285316576"></a>例如：可用性，监控周期为5分钟，连续三个周期原始值≤90%</p>
+        <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p89497934220"><a name="p89497934220"></a><a name="p89497934220"></a>配置告警规则监控的服务名称。</p>
         </td>
-        <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p7165553195712"><a name="p7165553195712"></a><a name="p7165553195712"></a>-</p>
+        <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p19494917424"><a name="p19494917424"></a><a name="p19494917424"></a>弹性云服务器</p>
         </td>
         </tr>
-        <tr id="row3951891428"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p816995310574"><a name="p816995310574"></a><a name="p816995310574"></a>分布式探测点</p>
+        <tr id="row895014917429"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p12949993427"><a name="p12949993427"></a><a name="p12949993427"></a>维度</p>
         </td>
-        <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p81721653165717"><a name="p81721653165717"></a><a name="p81721653165717"></a>目前支持华北（廊坊）、华东（上海）、华南（广州）。</p>
-        <div class="note" id="note117475345710"><a name="note117475345710"></a><a name="note117475345710"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p181801753125718"><a name="p181801753125718"></a><a name="p181801753125718"></a>当监控指标为可用性、丢包率、响应时间、HTTP响应码时可选分布式探测点。</p>
+        <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p1694918915428"><a name="p1694918915428"></a><a name="p1694918915428"></a>用于指定告警规则对应指标的维度名称</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p5949129174211"><a name="p5949129174211"></a><a name="p5949129174211"></a>云服务器</p>
+        </td>
+        </tr>
+        <tr id="row9950199425"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1695069174215"><a name="p1695069174215"></a><a name="p1695069174215"></a>监控范围</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p595012916426"><a name="p595012916426"></a><a name="p595012916426"></a>告警规则适用的资源范围，可选择资源分组或指定资源。</p>
+        <div class="note" id="note1895019910426"><a name="note1895019910426"></a><a name="note1895019910426"></a><span class="notetitle"> 说明： </span><div class="notebody"><a name="ul895019914215"></a><a name="ul895019914215"></a><ul id="ul895019914215"><li>当选择资源分组时，该分组下任何资源满足告警策略时，都会触发告警通知。</li><li>选择指定资源时，勾选具体的监控对象，单击<a name="image1895029184216"></a><a name="image1895029184216"></a><span><img id="image1895029184216" src="figures/右侧箭头.png" width="22.942500000000003" height="13.234563999999999"></span>将监控对象同步到右侧对话框。</li></ul>
         </div></div>
         </td>
-        <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p81836534572"><a name="p81836534572"></a><a name="p81836534572"></a>按需选择</p>
+        <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p1195016918422"><a name="p1195016918422"></a><a name="p1195016918422"></a>指定资源</p>
         </td>
         </tr>
-        <tr id="row5951129114220"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p3187753165713"><a name="p3187753165713"></a><a name="p3187753165713"></a>告警级别</p>
+        <tr id="row69501099422"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p795059104214"><a name="p795059104214"></a><a name="p795059104214"></a>选择分组</p>
         </td>
-        <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p519045317574"><a name="p519045317574"></a><a name="p519045317574"></a>根据告警的严重程度不同等级，可选择紧急、重要、次要、提示。</p>
+        <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p159502912423"><a name="p159502912423"></a><a name="p159502912423"></a>当监控范围为资源分组时需配置此参数。</p>
         </td>
-        <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p15193353125711"><a name="p15193353125711"></a><a name="p15193353125711"></a>重要</p>
+        <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p79501994428"><a name="p79501994428"></a><a name="p79501994428"></a>-</p>
+        </td>
+        </tr>
+        <tr id="row5951139154215"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p49501692426"><a name="p49501692426"></a><a name="p49501692426"></a>选择类型</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p1295099124214"><a name="p1295099124214"></a><a name="p1295099124214"></a>根据需要可选择从模板导入或自定义创建。</p>
+        <div class="note" id="note695013974211"><a name="note695013974211"></a><a name="note695013974211"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p39503914210"><a name="p39503914210"></a><a name="p39503914210"></a>当监控范围为指定资源时可选择从模板导入。</p>
+        </div></div>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p995019910423"><a name="p995019910423"></a><a name="p995019910423"></a>自定义创建</p>
+        </td>
+        </tr>
+        <tr id="row1095129204217"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p189513916422"><a name="p189513916422"></a><a name="p189513916422"></a>模板</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p795116910422"><a name="p795116910422"></a><a name="p795116910422"></a>选择需要导入的模板。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p169511293424"><a name="p169511293424"></a><a name="p169511293424"></a>-</p>
+        </td>
+        </tr>
+        <tr id="row89519954220"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1951159164214"><a name="p1951159164214"></a><a name="p1951159164214"></a>告警策略</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p9951189154217"><a name="p9951189154217"></a><a name="p9951189154217"></a>触发告警规则的告警策略。</p>
+        <p id="p2095129124217"><a name="p2095129124217"></a><a name="p2095129124217"></a>例如：CPU使用率，监控周期为5分钟，连续三个周期原始值≥80%</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p29511797423"><a name="p29511797423"></a><a name="p29511797423"></a>-</p>
+        </td>
+        </tr>
+        <tr id="row3951891428"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p19951139124214"><a name="p19951139124214"></a><a name="p19951139124214"></a>挂载点</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p795116911425"><a name="p795116911425"></a><a name="p795116911425"></a>当监控指标为细颗粒度的磁盘类监控指标时需配置该参数。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p159511497428"><a name="p159511497428"></a><a name="p159511497428"></a>/</p>
+        </td>
+        </tr>
+        <tr id="row5951129114220"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p179518918423"><a name="p179518918423"></a><a name="p179518918423"></a>告警级别</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p169511919421"><a name="p169511919421"></a><a name="p169511919421"></a>根据告警的严重程度不同等级，可选择紧急、重要、次要、提示。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p12951098425"><a name="p12951098425"></a><a name="p12951098425"></a>重要</p>
         </td>
         </tr>
         </tbody>
         </table>
 
-        >![](public_sys-resources/icon-note.gif) **说明：**   
-        >[表2](#table1951189104216)未提及的参数为默认值，无需配置。  
-
     3.  根据界面提示，配置告警通知参数。
 
         **图 3**  配置告警通知<a name="fig458094616420"></a>  
-        ![](figures/配置告警通知-4.png "配置告警通知-4")
+        ![](figures/配置告警通知-10.png "配置告警通知-10")
 
         **表 3**  配置告警通知
 
@@ -145,4 +180,6 @@
 
     4.  配置完成后，单击“立即创建”，完成告警规则的创建。
 
+
+告警规则添加完成后，当监控指标触发设定的阈值时，云监控会在第一时间通过消息通知服务实时告知您云上资源异常，以免因此造成业务损失。
 
