--- a/cn.zh-cn/用户指南/创建资源分组.md
+++ b/cn.zh-cn/用户指南/创建资源分组.md
@@ -24,17 +24,18 @@
 4.  单击页面左侧的“资源分组”，进入“资源分组”页面。
 5.  单击页面右上角的“创建资源分组”按钮。
 
-    **图 1**  创建资源分组<a name="fig1185318722919"></a>  
+    **图 1**  创建资源分组<a name="fig1435210577527"></a>  
     ![](figures/创建资源分组.png "创建资源分组")
 
 6.  按照界面提示，填写分组名称。
 7.  选择需要添加的云服务资源。
 
-    **图 2**  选择云服务资源<a name="fig18703243142914"></a>  
+    **图 2**  选择云服务资源<a name="fig19664821195318"></a>  
     ![](figures/选择云服务资源.png "选择云服务资源")
 
     >![](public_sys-resources/icon-note.gif) **说明：**   
-    >弹性云服务器和裸金属服务器支持通过名称、ID和私有IP地址搜索，其他类型仅支持通过ID搜索。  
+    >-   弹性云服务器和裸金属服务器支持通过名称、ID和私有IP地址搜索，其他类型仅支持通过ID搜索。  
+    >-   关联企业项目现仅支持华北-北京一、华东-上海二，其他区域暂不支持。  
 
 8.  单击“立即创建”，完成资源分组的创建。
 
