--- a/cn.zh-cn/用户指南/弹性云服务器的监控指标.md
+++ b/cn.zh-cn/用户指南/弹性云服务器的监控指标.md
@@ -55,48 +55,48 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p460094879134"><a name="p460094879134"></a><a name="p460094879134"></a>×（暂不支持）</p>
 </td>
 </tr>
-<tr id="row42137459191052"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p57691043191052"><a name="p57691043191052"></a><a name="p57691043191052"></a>磁盘读速率</p>
+<tr id="row0819203215594"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p10946133195911"><a name="p10946133195911"></a><a name="p10946133195911"></a>磁盘读带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p16944789191052"><a name="p16944789191052"></a><a name="p16944789191052"></a>√</p>
+<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p19511033165920"><a name="p19511033165920"></a><a name="p19511033165920"></a>√</p>
 </td>
-<td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p324513375585"><a name="p324513375585"></a><a name="p324513375585"></a>√</p>
+<td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p995593345917"><a name="p995593345917"></a><a name="p995593345917"></a>√</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.222222222222225%" headers="mcps1.2.6.1.3 "><p id="p1751019375356"><a name="p1751019375356"></a><a name="p1751019375356"></a>√</p>
+<td class="cellrowborder" valign="top" width="22.222222222222225%" headers="mcps1.2.6.1.3 "><p id="p1495853315595"><a name="p1495853315595"></a><a name="p1495853315595"></a>√</p>
 </td>
-<td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p441612209134"><a name="p441612209134"></a><a name="p441612209134"></a>√</p>
-</td>
-</tr>
-<tr id="row46793322191052"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p32162776191052"><a name="p32162776191052"></a><a name="p32162776191052"></a>磁盘写速率</p>
-</td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p29709033191052"><a name="p29709033191052"></a><a name="p29709033191052"></a>√</p>
-</td>
-<td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p125093765817"><a name="p125093765817"></a><a name="p125093765817"></a>√</p>
-</td>
-<td class="cellrowborder" valign="top" width="22.222222222222225%" headers="mcps1.2.6.1.3 "><p id="p8517123713519"><a name="p8517123713519"></a><a name="p8517123713519"></a>√</p>
-</td>
-<td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p196825219134"><a name="p196825219134"></a><a name="p196825219134"></a>√</p>
+<td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p39611433155914"><a name="p39611433155914"></a><a name="p39611433155914"></a>√</p>
 </td>
 </tr>
-<tr id="row63010606191052"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p3585443191052"><a name="p3585443191052"></a><a name="p3585443191052"></a>磁盘读操作速率</p>
+<tr id="row47676435120"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p10835744712"><a name="p10835744712"></a><a name="p10835744712"></a>磁盘写带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p35993543191052"><a name="p35993543191052"></a><a name="p35993543191052"></a>√</p>
+<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p1984016444115"><a name="p1984016444115"></a><a name="p1984016444115"></a>√</p>
 </td>
-<td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p82561373584"><a name="p82561373584"></a><a name="p82561373584"></a>√</p>
+<td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p168431244413"><a name="p168431244413"></a><a name="p168431244413"></a>√</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.222222222222225%" headers="mcps1.2.6.1.3 "><p id="p1652293763513"><a name="p1652293763513"></a><a name="p1652293763513"></a>√</p>
+<td class="cellrowborder" valign="top" width="22.222222222222225%" headers="mcps1.2.6.1.3 "><p id="p118471441813"><a name="p118471441813"></a><a name="p118471441813"></a>√</p>
 </td>
-<td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p379240229134"><a name="p379240229134"></a><a name="p379240229134"></a>√</p>
+<td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p1385124410113"><a name="p1385124410113"></a><a name="p1385124410113"></a>√</p>
 </td>
 </tr>
-<tr id="row45055968191052"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p25654807191052"><a name="p25654807191052"></a><a name="p25654807191052"></a>磁盘写操作速率</p>
+<tr id="row581210612314"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p19768471313"><a name="p19768471313"></a><a name="p19768471313"></a>磁盘读IOPS</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p12163363191052"><a name="p12163363191052"></a><a name="p12163363191052"></a>√</p>
+<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p137721571734"><a name="p137721571734"></a><a name="p137721571734"></a>√</p>
 </td>
-<td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p82639372581"><a name="p82639372581"></a><a name="p82639372581"></a>√</p>
+<td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p77771271637"><a name="p77771271637"></a><a name="p77771271637"></a>√</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.222222222222225%" headers="mcps1.2.6.1.3 "><p id="p17528637123520"><a name="p17528637123520"></a><a name="p17528637123520"></a>√</p>
+<td class="cellrowborder" valign="top" width="22.222222222222225%" headers="mcps1.2.6.1.3 "><p id="p12779671732"><a name="p12779671732"></a><a name="p12779671732"></a>√</p>
 </td>
-<td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p38086519134"><a name="p38086519134"></a><a name="p38086519134"></a>√</p>
+<td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p978447436"><a name="p978447436"></a><a name="p978447436"></a>√</p>
+</td>
+</tr>
+<tr id="row177711722410"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p19581031247"><a name="p19581031247"></a><a name="p19581031247"></a>磁盘写操作速率</p>
+</td>
+<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p49632312418"><a name="p49632312418"></a><a name="p49632312418"></a>√</p>
+</td>
+<td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p1967334417"><a name="p1967334417"></a><a name="p1967334417"></a>√</p>
+</td>
+<td class="cellrowborder" valign="top" width="22.222222222222225%" headers="mcps1.2.6.1.3 "><p id="p097393643"><a name="p097393643"></a><a name="p097393643"></a>√</p>
+</td>
+<td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p16977637413"><a name="p16977637413"></a><a name="p16977637413"></a>√</p>
 </td>
 </tr>
 <tr id="row35398125191052"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p48675856191052"><a name="p48675856191052"></a><a name="p48675856191052"></a>带内网络流入速率</p>
@@ -189,7 +189,7 @@
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p25128347222846"><a name="zh-cn_topic_0030911465_p25128347222846"></a><a name="zh-cn_topic_0030911465_p25128347222846"></a>如果用户使用的镜像未安装vmtools，则无法获取该监控指标。</p>
 </td>
 </tr>
-<tr id="zh-cn_topic_0030911465_row24828535222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p64954320222846"><a name="zh-cn_topic_0030911465_p64954320222846"></a><a name="zh-cn_topic_0030911465_p64954320222846"></a>磁盘读速率</p>
+<tr id="zh-cn_topic_0030911465_row24828535222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p292712452495"><a name="zh-cn_topic_0030911465_p292712452495"></a><a name="zh-cn_topic_0030911465_p292712452495"></a>磁盘读带宽</p>
 </td>
 <td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p26808602222846"><a name="zh-cn_topic_0030911465_p26808602222846"></a><a name="zh-cn_topic_0030911465_p26808602222846"></a>该指标用于统计每秒从弹性云服务器读出数据量，以字节/秒为单位。</p>
 </td>
@@ -198,7 +198,7 @@
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p45978283222846"><a name="zh-cn_topic_0030911465_p45978283222846"></a><a name="zh-cn_topic_0030911465_p45978283222846"></a>byte_out = (rd_bytes - last_rd_bytes) /时间差。</p>
 </td>
 </tr>
-<tr id="zh-cn_topic_0030911465_row11151367222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p30845571222846"><a name="zh-cn_topic_0030911465_p30845571222846"></a><a name="zh-cn_topic_0030911465_p30845571222846"></a>磁盘写速率</p>
+<tr id="zh-cn_topic_0030911465_row11151367222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p18939164514497"><a name="zh-cn_topic_0030911465_p18939164514497"></a><a name="zh-cn_topic_0030911465_p18939164514497"></a>磁盘写带宽</p>
 </td>
 <td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p15463290222846"><a name="zh-cn_topic_0030911465_p15463290222846"></a><a name="zh-cn_topic_0030911465_p15463290222846"></a>该指标用于统计每秒写到弹性云服务器的数据量，以字节/秒为单位。</p>
 </td>
@@ -207,7 +207,7 @@
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p10759388222846"><a name="zh-cn_topic_0030911465_p10759388222846"></a><a name="zh-cn_topic_0030911465_p10759388222846"></a>无。</p>
 </td>
 </tr>
-<tr id="zh-cn_topic_0030911465_row29725634222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p58966153222846"><a name="zh-cn_topic_0030911465_p58966153222846"></a><a name="zh-cn_topic_0030911465_p58966153222846"></a>磁盘读操作速率</p>
+<tr id="zh-cn_topic_0030911465_row29725634222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p59508458491"><a name="zh-cn_topic_0030911465_p59508458491"></a><a name="zh-cn_topic_0030911465_p59508458491"></a>磁盘读IOPS</p>
 </td>
 <td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p11529080222846"><a name="zh-cn_topic_0030911465_p11529080222846"></a><a name="zh-cn_topic_0030911465_p11529080222846"></a>该指标用于统计每秒从弹性云服务器读取数据的请求次数，以请求/秒为单位。</p>
 </td>
@@ -216,7 +216,7 @@
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p54054474222846"><a name="zh-cn_topic_0030911465_p54054474222846"></a><a name="zh-cn_topic_0030911465_p54054474222846"></a>req_out = (rd_req - last_rd_req) /时间差。</p>
 </td>
 </tr>
-<tr id="zh-cn_topic_0030911465_row16728218222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p12808390222846"><a name="zh-cn_topic_0030911465_p12808390222846"></a><a name="zh-cn_topic_0030911465_p12808390222846"></a>磁盘写操作速率</p>
+<tr id="zh-cn_topic_0030911465_row16728218222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p11969114513496"><a name="zh-cn_topic_0030911465_p11969114513496"></a><a name="zh-cn_topic_0030911465_p11969114513496"></a>磁盘写IOPS</p>
 </td>
 <td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p30846695222846"><a name="zh-cn_topic_0030911465_p30846695222846"></a><a name="zh-cn_topic_0030911465_p30846695222846"></a>该指标用于统计每秒从弹性云服务器写数据的请求次数，以请求/秒为单位。</p>
 </td>
