--- a/cn.zh-cn/用户指南/弹性负载均衡服务的监控指标.md
+++ b/cn.zh-cn/用户指南/弹性负载均衡服务的监控指标.md
@@ -146,7 +146,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="14.979999999999999%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0107344474_p3961931193410"><a name="zh-cn_topic_0107344474_p3961931193410"></a><a name="zh-cn_topic_0107344474_p3961931193410"></a>1分钟</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p710851712446"><a name="zh-cn_topic_0107344474_p710851712446"></a><a name="zh-cn_topic_0107344474_p710851712446"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
+<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p1606144261311"><a name="zh-cn_topic_0107344474_p1606144261311"></a><a name="zh-cn_topic_0107344474_p1606144261311"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0107344474_row30659571155038"><td class="cellrowborder" valign="top" width="17.36%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0107344474_p17394881155344"><a name="zh-cn_topic_0107344474_p17394881155344"></a><a name="zh-cn_topic_0107344474_p17394881155344"></a>非活跃连接数</p>
@@ -156,7 +156,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="14.979999999999999%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0107344474_p189651831203416"><a name="zh-cn_topic_0107344474_p189651831203416"></a><a name="zh-cn_topic_0107344474_p189651831203416"></a>1分钟</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p201089179444"><a name="zh-cn_topic_0107344474_p201089179444"></a><a name="zh-cn_topic_0107344474_p201089179444"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
+<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p8455846161312"><a name="zh-cn_topic_0107344474_p8455846161312"></a><a name="zh-cn_topic_0107344474_p8455846161312"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0107344474_row21214413155038"><td class="cellrowborder" valign="top" width="17.36%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0107344474_p49164764155344"><a name="zh-cn_topic_0107344474_p49164764155344"></a><a name="zh-cn_topic_0107344474_p49164764155344"></a>新建连接数</p>
@@ -166,7 +166,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="14.979999999999999%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0107344474_p189691831193412"><a name="zh-cn_topic_0107344474_p189691831193412"></a><a name="zh-cn_topic_0107344474_p189691831193412"></a>1分钟</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p5108141764413"><a name="zh-cn_topic_0107344474_p5108141764413"></a><a name="zh-cn_topic_0107344474_p5108141764413"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
+<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p0820115220138"><a name="zh-cn_topic_0107344474_p0820115220138"></a><a name="zh-cn_topic_0107344474_p0820115220138"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0107344474_row35845607155038"><td class="cellrowborder" valign="top" width="17.36%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0107344474_p712286155344"><a name="zh-cn_topic_0107344474_p712286155344"></a><a name="zh-cn_topic_0107344474_p712286155344"></a>流入数据包数</p>
@@ -176,7 +176,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="14.979999999999999%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0107344474_p17973103110347"><a name="zh-cn_topic_0107344474_p17973103110347"></a><a name="zh-cn_topic_0107344474_p17973103110347"></a>1分钟</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p20108141774419"><a name="zh-cn_topic_0107344474_p20108141774419"></a><a name="zh-cn_topic_0107344474_p20108141774419"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
+<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p16922249161311"><a name="zh-cn_topic_0107344474_p16922249161311"></a><a name="zh-cn_topic_0107344474_p16922249161311"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0107344474_row33709590155038"><td class="cellrowborder" valign="top" width="17.36%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0107344474_p49673397155344"><a name="zh-cn_topic_0107344474_p49673397155344"></a><a name="zh-cn_topic_0107344474_p49673397155344"></a>流出数据包数</p>
@@ -186,7 +186,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="14.979999999999999%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0107344474_p89778311344"><a name="zh-cn_topic_0107344474_p89778311344"></a><a name="zh-cn_topic_0107344474_p89778311344"></a>1分钟</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p121087174446"><a name="zh-cn_topic_0107344474_p121087174446"></a><a name="zh-cn_topic_0107344474_p121087174446"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
+<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p8756185781313"><a name="zh-cn_topic_0107344474_p8756185781313"></a><a name="zh-cn_topic_0107344474_p8756185781313"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0107344474_row1609208155038"><td class="cellrowborder" valign="top" width="17.36%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0107344474_p37321941155344"><a name="zh-cn_topic_0107344474_p37321941155344"></a><a name="zh-cn_topic_0107344474_p37321941155344"></a>网络流入速率</p>
@@ -196,7 +196,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="14.979999999999999%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0107344474_p9980203143419"><a name="zh-cn_topic_0107344474_p9980203143419"></a><a name="zh-cn_topic_0107344474_p9980203143419"></a>1分钟</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p191081017114415"><a name="zh-cn_topic_0107344474_p191081017114415"></a><a name="zh-cn_topic_0107344474_p191081017114415"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
+<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p16501115143"><a name="zh-cn_topic_0107344474_p16501115143"></a><a name="zh-cn_topic_0107344474_p16501115143"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0107344474_row63085360155038"><td class="cellrowborder" valign="top" width="17.36%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0107344474_p35313018155344"><a name="zh-cn_topic_0107344474_p35313018155344"></a><a name="zh-cn_topic_0107344474_p35313018155344"></a>网络流出速率</p>
@@ -206,7 +206,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="14.979999999999999%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0107344474_p16982163123419"><a name="zh-cn_topic_0107344474_p16982163123419"></a><a name="zh-cn_topic_0107344474_p16982163123419"></a>1分钟</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p111088176443"><a name="zh-cn_topic_0107344474_p111088176443"></a><a name="zh-cn_topic_0107344474_p111088176443"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
+<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p18220135161420"><a name="zh-cn_topic_0107344474_p18220135161420"></a><a name="zh-cn_topic_0107344474_p18220135161420"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0107344474_row688410916363"><td class="cellrowborder" valign="top" width="17.36%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0107344474_p20824525183611"><a name="zh-cn_topic_0107344474_p20824525183611"></a><a name="zh-cn_topic_0107344474_p20824525183611"></a>异常主机数</p>
@@ -216,7 +216,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="14.979999999999999%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0107344474_p882910251361"><a name="zh-cn_topic_0107344474_p882910251361"></a><a name="zh-cn_topic_0107344474_p882910251361"></a>1分钟</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p15108121711447"><a name="zh-cn_topic_0107344474_p15108121711447"></a><a name="zh-cn_topic_0107344474_p15108121711447"></a>测量对象：增强型负载均衡器。</p>
+<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p1638618719151"><a name="zh-cn_topic_0107344474_p1638618719151"></a><a name="zh-cn_topic_0107344474_p1638618719151"></a>测量对象：增强型负载均衡器。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0107344474_row2690166163618"><td class="cellrowborder" valign="top" width="17.36%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0107344474_p1983452518367"><a name="zh-cn_topic_0107344474_p1983452518367"></a><a name="zh-cn_topic_0107344474_p1983452518367"></a>正常主机数</p>
@@ -226,7 +226,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="14.979999999999999%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0107344474_p158392025173619"><a name="zh-cn_topic_0107344474_p158392025173619"></a><a name="zh-cn_topic_0107344474_p158392025173619"></a>1分钟</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p1410811717448"><a name="zh-cn_topic_0107344474_p1410811717448"></a><a name="zh-cn_topic_0107344474_p1410811717448"></a>测量对象：增强型负载均衡器。</p>
+<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p13869183661516"><a name="zh-cn_topic_0107344474_p13869183661516"></a><a name="zh-cn_topic_0107344474_p13869183661516"></a>测量对象：增强型负载均衡器。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0107344474_row1913955911538"><td class="cellrowborder" valign="top" width="17.36%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0107344474_p185717305419"><a name="zh-cn_topic_0107344474_p185717305419"></a><a name="zh-cn_topic_0107344474_p185717305419"></a>七层查询速率</p>
@@ -236,7 +236,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="14.979999999999999%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0107344474_p298615316346"><a name="zh-cn_topic_0107344474_p298615316346"></a><a name="zh-cn_topic_0107344474_p298615316346"></a>1分钟</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p177062045236"><a name="zh-cn_topic_0107344474_p177062045236"></a><a name="zh-cn_topic_0107344474_p177062045236"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
+<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p14827161931412"><a name="zh-cn_topic_0107344474_p14827161931412"></a><a name="zh-cn_topic_0107344474_p14827161931412"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0107344474_row188471515122"><td class="cellrowborder" valign="top" width="17.36%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0107344474_p174133012457"><a name="zh-cn_topic_0107344474_p174133012457"></a><a name="zh-cn_topic_0107344474_p174133012457"></a>七层协议返回码(2XX)</p>
@@ -321,12 +321,43 @@
 </tr>
 <tr id="zh-cn_topic_0107344474_row1753012471129"><td class="cellrowborder" valign="top" width="17.36%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0107344474_p1618471098"><a name="zh-cn_topic_0107344474_p1618471098"></a><a name="zh-cn_topic_0107344474_p1618471098"></a>七层协议RT</p>
 </td>
-<td class="cellrowborder" valign="top" width="45.24%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0107344474_p01810713912"><a name="zh-cn_topic_0107344474_p01810713912"></a><a name="zh-cn_topic_0107344474_p01810713912"></a>统计负载均衡的平均响应时间。以毫秒为单位。（http和https监听器才有此指标）</p>
+<td class="cellrowborder" valign="top" width="45.24%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0107344474_p01810713912"><a name="zh-cn_topic_0107344474_p01810713912"></a><a name="zh-cn_topic_0107344474_p01810713912"></a>统计测量对象当前7层平均响应时间。以毫秒为单位。（http和https监听器才有此指标）</p>
 <p id="zh-cn_topic_0107344474_p122031929743"><a name="zh-cn_topic_0107344474_p122031929743"></a><a name="zh-cn_topic_0107344474_p122031929743"></a>单位：毫秒。</p>
 </td>
 <td class="cellrowborder" valign="top" width="14.979999999999999%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0107344474_p1665957173315"><a name="zh-cn_topic_0107344474_p1665957173315"></a><a name="zh-cn_topic_0107344474_p1665957173315"></a>1分钟</p>
 </td>
 <td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p1710861710446"><a name="zh-cn_topic_0107344474_p1710861710446"></a><a name="zh-cn_topic_0107344474_p1710861710446"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
+</td>
+</tr>
+<tr id="zh-cn_topic_0107344474_row678414527145"><td class="cellrowborder" valign="top" width="17.36%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0107344474_p3758153516187"><a name="zh-cn_topic_0107344474_p3758153516187"></a><a name="zh-cn_topic_0107344474_p3758153516187"></a>七层后端返回码(4XX)</p>
+</td>
+<td class="cellrowborder" valign="top" width="45.24%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0107344474_p579181916136"><a name="zh-cn_topic_0107344474_p579181916136"></a><a name="zh-cn_topic_0107344474_p579181916136"></a>统计测量对象当前7层后端4XX系列状态响应码的数量。（http和https监听器才有此指标）</p>
+<p id="zh-cn_topic_0107344474_p979141981313"><a name="zh-cn_topic_0107344474_p979141981313"></a><a name="zh-cn_topic_0107344474_p979141981313"></a>单位：个/秒。</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.979999999999999%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0107344474_p19724456155116"><a name="zh-cn_topic_0107344474_p19724456155116"></a><a name="zh-cn_topic_0107344474_p19724456155116"></a>1分钟</p>
+</td>
+<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p472410567517"><a name="zh-cn_topic_0107344474_p472410567517"></a><a name="zh-cn_topic_0107344474_p472410567517"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
+</td>
+</tr>
+<tr id="zh-cn_topic_0107344474_row2772855191419"><td class="cellrowborder" valign="top" width="17.36%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0107344474_p984182014165"><a name="zh-cn_topic_0107344474_p984182014165"></a><a name="zh-cn_topic_0107344474_p984182014165"></a>七层后端返回码(5XX)</p>
+</td>
+<td class="cellrowborder" valign="top" width="45.24%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0107344474_p187361836141615"><a name="zh-cn_topic_0107344474_p187361836141615"></a><a name="zh-cn_topic_0107344474_p187361836141615"></a>统计测量对象当前7层后端5XX系列状态响应码的数量。</p>
+<p id="zh-cn_topic_0107344474_p428723114176"><a name="zh-cn_topic_0107344474_p428723114176"></a><a name="zh-cn_topic_0107344474_p428723114176"></a>（http和https监听器才有此指标）</p>
+<p id="zh-cn_topic_0107344474_p8737136171610"><a name="zh-cn_topic_0107344474_p8737136171610"></a><a name="zh-cn_topic_0107344474_p8737136171610"></a>单位：个/秒。</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.979999999999999%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0107344474_p3540235522"><a name="zh-cn_topic_0107344474_p3540235522"></a><a name="zh-cn_topic_0107344474_p3540235522"></a>1分钟</p>
+</td>
+<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p1054018312521"><a name="zh-cn_topic_0107344474_p1054018312521"></a><a name="zh-cn_topic_0107344474_p1054018312521"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
+</td>
+</tr>
+<tr id="zh-cn_topic_0107344474_row28751757141413"><td class="cellrowborder" valign="top" width="17.36%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0107344474_p1115611517176"><a name="zh-cn_topic_0107344474_p1115611517176"></a><a name="zh-cn_topic_0107344474_p1115611517176"></a>七层后端的RT</p>
+</td>
+<td class="cellrowborder" valign="top" width="45.24%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0107344474_p37333256173"><a name="zh-cn_topic_0107344474_p37333256173"></a><a name="zh-cn_topic_0107344474_p37333256173"></a>统计测量对象当前7层后端平均响应时间。（http和https监听器才有此指标）</p>
+<p id="zh-cn_topic_0107344474_p15734172514173"><a name="zh-cn_topic_0107344474_p15734172514173"></a><a name="zh-cn_topic_0107344474_p15734172514173"></a>单位：毫秒。</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.979999999999999%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0107344474_p1960614494512"><a name="zh-cn_topic_0107344474_p1960614494512"></a><a name="zh-cn_topic_0107344474_p1960614494512"></a>1分钟</p>
+</td>
+<td class="cellrowborder" valign="top" width="22.42%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0107344474_p560619495517"><a name="zh-cn_topic_0107344474_p560619495517"></a><a name="zh-cn_topic_0107344474_p560619495517"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
 </td>
 </tr>
 </tbody>
