--- a/cn.zh-cn/用户指南/查看分组列表.md
+++ b/cn.zh-cn/用户指南/查看分组列表.md
@@ -32,6 +32,13 @@
     <td class="cellrowborder" valign="top" width="75%" headers="mcps1.2.3.1.2 "><a name="ul77236180447"></a><a name="ul77236180447"></a><ul id="ul77236180447"><li>组内所有资源均未发生告警，为健康状态。</li><li>只要组内有资源正在告警，为不健康状态。</li><li>组内所有资源均未设置告警规则，提示未设置告警规则。</li></ul>
     </td>
     </tr>
+    <tr id="row1951855614361"><td class="cellrowborder" valign="top" width="25%" headers="mcps1.2.3.1.1 "><p id="p1751885683617"><a name="p1751885683617"></a><a name="p1751885683617"></a>关联对象</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="75%" headers="mcps1.2.3.1.2 "><p id="p15518175683612"><a name="p15518175683612"></a><a name="p15518175683612"></a>关联对象为该资源分组所关联的企业项目。关联后，该资源分组中的资源与对应企业项目中的资源将自动保持一致。</p>
+    <div class="note" id="note1270513274379"><a name="note1270513274379"></a><a name="note1270513274379"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p270692753716"><a name="p270692753716"></a><a name="p270692753716"></a>关联企业项目现仅支持华北-北京一、华东-上海二，其他区域待上线。</p>
+    </div></div>
+    </td>
+    </tr>
     <tr id="row2057801113717"><td class="cellrowborder" valign="top" width="25%" headers="mcps1.2.3.1.1 "><p id="p157811112377"><a name="p157811112377"></a><a name="p157811112377"></a>不健康资源数</p>
     </td>
     <td class="cellrowborder" valign="top" width="75%" headers="mcps1.2.3.1.2 "><p id="p43331741104518"><a name="p43331741104518"></a><a name="p43331741104518"></a>组内所有正在告警的资源数总和。例如您有2台弹性云服务器 、1台云硬盘正在告警，则不健康资源数为3。</p>
