--- a/cn.zh-cn/用户指南/创建告警规则-2.md
+++ b/cn.zh-cn/用户指南/创建告警规则-2.md
@@ -9,144 +9,173 @@
 1.  登录管理控制台。
 2.  单击“管理与部署 \> 云监控”。
 3.  单击页面左侧的“事件监控”，在事件列表页面，单击相应事件右侧的创建告警规则。
-4.  根据页面提示，配置参数，参数说明如[表1](#zh-cn_topic_0109299893_table121943547193)所示。
+4.  在“创建告警规则”界面，根据界面提示配置参数。
+    1.  根据界面提示，配置规则信息参数。
 
-    **图 1**  创建告警规则（事件监控）<a name="zh-cn_topic_0109299893_fig1168135514266"></a>  
-    ![](figures/创建告警规则（事件监控）.png "创建告警规则（事件监控）")
+        **图 1**  配置规则信息<a name="fig283216161388"></a>  
+        ![](figures/配置规则信息-5.png "配置规则信息-5")
 
-    **表 1**  创建告警规则
+        **表 1**  配置规则信息
 
-    <a name="zh-cn_topic_0109299893_table121943547193"></a>
-    <table><thead align="left"><tr id="zh-cn_topic_0109299893_row81911454121913"><th class="cellrowborder" valign="top" width="17%" id="mcps1.2.4.1.1"><p id="zh-cn_topic_0109299893_p191918545194"><a name="zh-cn_topic_0109299893_p191918545194"></a><a name="zh-cn_topic_0109299893_p191918545194"></a>参数</p>
-    </th>
-    <th class="cellrowborder" valign="top" width="51%" id="mcps1.2.4.1.2"><p id="zh-cn_topic_0109299893_p219114546193"><a name="zh-cn_topic_0109299893_p219114546193"></a><a name="zh-cn_topic_0109299893_p219114546193"></a>参数说明</p>
-    </th>
-    <th class="cellrowborder" valign="top" width="32%" id="mcps1.2.4.1.3"><p id="zh-cn_topic_0109299893_p8191354131914"><a name="zh-cn_topic_0109299893_p8191354131914"></a><a name="zh-cn_topic_0109299893_p8191354131914"></a>取值样例</p>
-    </th>
-    </tr>
-    </thead>
-    <tbody><tr id="zh-cn_topic_0109299893_row919265418194"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0109299893_p101922549198"><a name="zh-cn_topic_0109299893_p101922549198"></a><a name="zh-cn_topic_0109299893_p101922549198"></a>选择类型</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="51%" headers="mcps1.2.4.1.2 "><p id="p145301056319"><a name="p145301056319"></a><a name="p145301056319"></a>选择自定义创建。</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0109299893_p619217541193"><a name="zh-cn_topic_0109299893_p619217541193"></a><a name="zh-cn_topic_0109299893_p619217541193"></a>自定义创建</p>
-    </td>
-    </tr>
-    <tr id="zh-cn_topic_0109299893_row1990911251102"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0109299893_p1190992510018"><a name="zh-cn_topic_0109299893_p1190992510018"></a><a name="zh-cn_topic_0109299893_p1190992510018"></a>事件来源</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="51%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0109299893_p890972512015"><a name="zh-cn_topic_0109299893_p890972512015"></a><a name="zh-cn_topic_0109299893_p890972512015"></a>事件来源的云服务名称。</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0109299893_p209091825601"><a name="zh-cn_topic_0109299893_p209091825601"></a><a name="zh-cn_topic_0109299893_p209091825601"></a>ECS</p>
-    </td>
-    </tr>
-    <tr id="zh-cn_topic_0109299893_row44972174713"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0109299893_p449719171710"><a name="zh-cn_topic_0109299893_p449719171710"></a><a name="zh-cn_topic_0109299893_p449719171710"></a>事件名称</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="51%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0109299893_p34971017970"><a name="zh-cn_topic_0109299893_p34971017970"></a><a name="zh-cn_topic_0109299893_p34971017970"></a>用户操作系统资源的动作，如登录，登出。</p>
-    <p id="p9822102778"><a name="p9822102778"></a><a name="p9822102778"></a>事件监控支持的操作事件请参见<a href="事件监控支持的操作事件说明.md">事件监控支持的操作事件说明</a>。</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0109299893_p7497121716711"><a name="zh-cn_topic_0109299893_p7497121716711"></a><a name="zh-cn_topic_0109299893_p7497121716711"></a>deleteServer</p>
-    </td>
-    </tr>
-    <tr id="zh-cn_topic_0109299893_row71513301398"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0109299893_p191517304916"><a name="zh-cn_topic_0109299893_p191517304916"></a><a name="zh-cn_topic_0109299893_p191517304916"></a>监控范围</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="51%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0109299893_p415119302097"><a name="zh-cn_topic_0109299893_p415119302097"></a><a name="zh-cn_topic_0109299893_p415119302097"></a>创建事件监控针对的资源范围。</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0109299893_p191511301591"><a name="zh-cn_topic_0109299893_p191511301591"></a><a name="zh-cn_topic_0109299893_p191511301591"></a>全部资源</p>
-    </td>
-    </tr>
-    <tr id="zh-cn_topic_0109299893_row7117201918102"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0109299893_p121172019121011"><a name="zh-cn_topic_0109299893_p121172019121011"></a><a name="zh-cn_topic_0109299893_p121172019121011"></a>监控对象</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="51%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0109299893_p201171619161010"><a name="zh-cn_topic_0109299893_p201171619161010"></a><a name="zh-cn_topic_0109299893_p201171619161010"></a>当选择指定资源时需配置该参数。</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0109299893_p2011715192103"><a name="zh-cn_topic_0109299893_p2011715192103"></a><a name="zh-cn_topic_0109299893_p2011715192103"></a>-</p>
-    </td>
-    </tr>
-    <tr id="zh-cn_topic_0109299893_row819245421917"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0109299893_p19612559499"><a name="zh-cn_topic_0109299893_p19612559499"></a><a name="zh-cn_topic_0109299893_p19612559499"></a>触发方式</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="51%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0109299893_p1192185417196"><a name="zh-cn_topic_0109299893_p1192185417196"></a><a name="zh-cn_topic_0109299893_p1192185417196"></a>用户可根据该操作的严重程度选择立即触发或累计触发。</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0109299893_p6148813121318"><a name="zh-cn_topic_0109299893_p6148813121318"></a><a name="zh-cn_topic_0109299893_p6148813121318"></a>立即触发</p>
-    </td>
-    </tr>
-    <tr id="row1684313306478"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="p9435204373719"><a name="p9435204373719"></a><a name="p9435204373719"></a>告警策略</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="51%" headers="mcps1.2.4.1.2 "><p id="p2043584343715"><a name="p2043584343715"></a><a name="p2043584343715"></a>触发告警的告警策略。</p>
-    <p id="p043712111488"><a name="p043712111488"></a><a name="p043712111488"></a>例如：监控周期为5分钟，累计达到3次。</p>
-    <div class="note" id="note954752534812"><a name="note954752534812"></a><a name="note954752534812"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p5548162514488"><a name="p5548162514488"></a><a name="p5548162514488"></a>当触发方式为累计触发时需配置该参数。</p>
-    </div></div>
-    </td>
-    <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="p54357432379"><a name="p54357432379"></a><a name="p54357432379"></a>-</p>
-    </td>
-    </tr>
-    <tr id="zh-cn_topic_0109299893_row11928164865516"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0109299893_p1195420845111"><a name="zh-cn_topic_0109299893_p1195420845111"></a><a name="zh-cn_topic_0109299893_p1195420845111"></a>告警级别</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="51%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0109299893_p17956884516"><a name="zh-cn_topic_0109299893_p17956884516"></a><a name="zh-cn_topic_0109299893_p17956884516"></a>根据告警的严重程度不同等级，可选择紧急、重要、次要、提示。</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0109299893_p8956389517"><a name="zh-cn_topic_0109299893_p8956389517"></a><a name="zh-cn_topic_0109299893_p8956389517"></a>重要</p>
-    </td>
-    </tr>
-    <tr id="zh-cn_topic_0109299893_row019355410196"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0109299893_p14193165414191"><a name="zh-cn_topic_0109299893_p14193165414191"></a><a name="zh-cn_topic_0109299893_p14193165414191"></a>发送通知</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="51%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0109299893_p1719311547199"><a name="zh-cn_topic_0109299893_p1719311547199"></a><a name="zh-cn_topic_0109299893_p1719311547199"></a>配置是否发送邮件、短信、HTTP和HTTPS通知用户。</p>
-    <p id="p2554827134314"><a name="p2554827134314"></a><a name="p2554827134314"></a>选择“是”（推荐选择），会发送通知；选择“否”，不会发送通知。</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0109299893_p12193115491911"><a name="zh-cn_topic_0109299893_p12193115491911"></a><a name="zh-cn_topic_0109299893_p12193115491911"></a>是</p>
-    </td>
-    </tr>
-    <tr id="row033332312910"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="p165875094913"><a name="p165875094913"></a><a name="p165875094913"></a>生效时间</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="51%" headers="mcps1.2.4.1.2 "><p id="p7658165024912"><a name="p7658165024912"></a><a name="p7658165024912"></a>该告警规则仅在生效时间内发送通知消息。</p>
-    <p id="p52121744532"><a name="p52121744532"></a><a name="p52121744532"></a>如生效时间为00:00-8:00，则该告警规则仅在00:00-8:00发送通知消息。</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="p96581505499"><a name="p96581505499"></a><a name="p96581505499"></a>-</p>
-    </td>
-    </tr>
-    <tr id="zh-cn_topic_0109299893_row8194155410198"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0109299893_p1819325431915"><a name="zh-cn_topic_0109299893_p1819325431915"></a><a name="zh-cn_topic_0109299893_p1819325431915"></a>主题名称</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="51%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0109299893_p9193115420195"><a name="zh-cn_topic_0109299893_p9193115420195"></a><a name="zh-cn_topic_0109299893_p9193115420195"></a>需要发送告警通知的主题名称。</p>
-    <p id="zh-cn_topic_0109299893_p17193165471917"><a name="zh-cn_topic_0109299893_p17193165471917"></a><a name="zh-cn_topic_0109299893_p17193165471917"></a>当发送通知选择“是”时，需要选择已有的主题名称，若此处没有需要的主题则需先创建主题，该功能会调用消息通知服务（SMN），创建主题请参见《消息通知服务用户指南》。</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0109299893_p191931154191914"><a name="zh-cn_topic_0109299893_p191931154191914"></a><a name="zh-cn_topic_0109299893_p191931154191914"></a>-</p>
-    </td>
-    </tr>
-    <tr id="zh-cn_topic_0109299893_row2194145410191"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0109299893_p01945547193"><a name="zh-cn_topic_0109299893_p01945547193"></a><a name="zh-cn_topic_0109299893_p01945547193"></a>触发条件</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="51%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0109299893_p1194155411914"><a name="zh-cn_topic_0109299893_p1194155411914"></a><a name="zh-cn_topic_0109299893_p1194155411914"></a>选择发送通知后，出现告警为必选项。</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0109299893_p19194165419195"><a name="zh-cn_topic_0109299893_p19194165419195"></a><a name="zh-cn_topic_0109299893_p19194165419195"></a>出现告警</p>
-    </td>
-    </tr>
-    </tbody>
-    </table>
+        <a name="table17694105411317"></a>
+        <table><thead align="left"><tr id="row18694135418312"><th class="cellrowborder" valign="top" width="14.97%" id="mcps1.2.4.1.1"><p id="p4694195463111"><a name="p4694195463111"></a><a name="p4694195463111"></a>参数</p>
+        </th>
+        <th class="cellrowborder" valign="top" width="62.96000000000001%" id="mcps1.2.4.1.2"><p id="p12694175417314"><a name="p12694175417314"></a><a name="p12694175417314"></a>参数说明</p>
+        </th>
+        <th class="cellrowborder" valign="top" width="22.07%" id="mcps1.2.4.1.3"><p id="p156947547311"><a name="p156947547311"></a><a name="p156947547311"></a>取值样例</p>
+        </th>
+        </tr>
+        </thead>
+        <tbody><tr id="row17694105423111"><td class="cellrowborder" valign="top" width="14.97%" headers="mcps1.2.4.1.1 "><p id="p7694854113110"><a name="p7694854113110"></a><a name="p7694854113110"></a>名称</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="62.96000000000001%" headers="mcps1.2.4.1.2 "><p id="p469414543310"><a name="p469414543310"></a><a name="p469414543310"></a>系统会随机产生一个名称，用户也可以进行修改。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="22.07%" headers="mcps1.2.4.1.3 "><p id="p1069495418317"><a name="p1069495418317"></a><a name="p1069495418317"></a>alarm-b6al</p>
+        </td>
+        </tr>
+        <tr id="row13694165413316"><td class="cellrowborder" valign="top" width="14.97%" headers="mcps1.2.4.1.1 "><p id="p6694115493116"><a name="p6694115493116"></a><a name="p6694115493116"></a>描述</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="62.96000000000001%" headers="mcps1.2.4.1.2 "><p id="p0694954103120"><a name="p0694954103120"></a><a name="p0694954103120"></a>告警规则描述（此参数非必填项）。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="22.07%" headers="mcps1.2.4.1.3 "><p id="p169465412315"><a name="p169465412315"></a><a name="p169465412315"></a>-</p>
+        </td>
+        </tr>
+        </tbody>
+        </table>
 
-5.  规则信息，根据界面提示配置参数，如[表2](#zh-cn_topic_0109299893_table7623731163957)所示。配置完成后，单击“创建”，完成自定义告警规则的创建。
+    2.  选择监控对象，配置告警内容参数。
 
-    **表 2**  规则信息
+        **图 2**  配置告警内容<a name="fig1674320252422"></a>  
+        ![](figures/配置告警内容-6.png "配置告警内容-6")
 
-    <a name="zh-cn_topic_0109299893_table7623731163957"></a>
-    <table><thead align="left"><tr id="zh-cn_topic_0109299893_row1169056163957"><th class="cellrowborder" valign="top" width="16.42%" id="mcps1.2.4.1.1"><p id="zh-cn_topic_0109299893_p57791071164012"><a name="zh-cn_topic_0109299893_p57791071164012"></a><a name="zh-cn_topic_0109299893_p57791071164012"></a>参数</p>
-    </th>
-    <th class="cellrowborder" valign="top" width="50.62%" id="mcps1.2.4.1.2"><p id="zh-cn_topic_0109299893_p50565187164012"><a name="zh-cn_topic_0109299893_p50565187164012"></a><a name="zh-cn_topic_0109299893_p50565187164012"></a>参数说明</p>
-    </th>
-    <th class="cellrowborder" valign="top" width="32.96%" id="mcps1.2.4.1.3"><p id="zh-cn_topic_0109299893_p2139446164012"><a name="zh-cn_topic_0109299893_p2139446164012"></a><a name="zh-cn_topic_0109299893_p2139446164012"></a>取值样例</p>
-    </th>
-    </tr>
-    </thead>
-    <tbody><tr id="zh-cn_topic_0109299893_row36013392163957"><td class="cellrowborder" valign="top" width="16.42%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0109299893_p61370602164020"><a name="zh-cn_topic_0109299893_p61370602164020"></a><a name="zh-cn_topic_0109299893_p61370602164020"></a>名称</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="50.62%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0109299893_p4962871164020"><a name="zh-cn_topic_0109299893_p4962871164020"></a><a name="zh-cn_topic_0109299893_p4962871164020"></a>系统会随机产生一个名称，用户也可以进行修改。</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="32.96%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0109299893_p66448289164020"><a name="zh-cn_topic_0109299893_p66448289164020"></a><a name="zh-cn_topic_0109299893_p66448289164020"></a>alarm-b6al</p>
-    </td>
-    </tr>
-    <tr id="zh-cn_topic_0109299893_row2717654163957"><td class="cellrowborder" valign="top" width="16.42%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0109299893_p55312011164020"><a name="zh-cn_topic_0109299893_p55312011164020"></a><a name="zh-cn_topic_0109299893_p55312011164020"></a>描述</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="50.62%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0109299893_p51087931164020"><a name="zh-cn_topic_0109299893_p51087931164020"></a><a name="zh-cn_topic_0109299893_p51087931164020"></a>告警规则描述（此参数非必填项）。</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="32.96%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0109299893_p44481764164020"><a name="zh-cn_topic_0109299893_p44481764164020"></a><a name="zh-cn_topic_0109299893_p44481764164020"></a>-</p>
-    </td>
-    </tr>
-    </tbody>
-    </table>
+        **表 2**  创建告警规则
+
+        <a name="table1457344744312"></a>
+        <table><thead align="left"><tr id="row6587347154311"><th class="cellrowborder" valign="top" width="14.97%" id="mcps1.2.4.1.1"><p id="p1131812194418"><a name="p1131812194418"></a><a name="p1131812194418"></a>参数</p>
+        </th>
+        <th class="cellrowborder" valign="top" width="63.43%" id="mcps1.2.4.1.2"><p id="p11592147134315"><a name="p11592147134315"></a><a name="p11592147134315"></a>参数说明</p>
+        </th>
+        <th class="cellrowborder" valign="top" width="21.6%" id="mcps1.2.4.1.3"><p id="p13596647104314"><a name="p13596647104314"></a><a name="p13596647104314"></a>取值样例</p>
+        </th>
+        </tr>
+        </thead>
+        <tbody><tr id="row15621154718433"><td class="cellrowborder" valign="top" width="14.97%" headers="mcps1.2.4.1.1 "><p id="p136286473431"><a name="p136286473431"></a><a name="p136286473431"></a>资源类型</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.43%" headers="mcps1.2.4.1.2 "><p id="p16634144734311"><a name="p16634144734311"></a><a name="p16634144734311"></a>配置告警规则监控的服务名称。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.6%" headers="mcps1.2.4.1.3 "><p id="p10638447154312"><a name="p10638447154312"></a><a name="p10638447154312"></a>事件监控</p>
+        </td>
+        </tr>
+        <tr id="row1264004774318"><td class="cellrowborder" valign="top" width="14.97%" headers="mcps1.2.4.1.1 "><p id="p1164264784311"><a name="p1164264784311"></a><a name="p1164264784311"></a>维度</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.43%" headers="mcps1.2.4.1.2 "><p id="p2645347124315"><a name="p2645347124315"></a><a name="p2645347124315"></a>用于指定告警规则对应指标的维度名称。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.6%" headers="mcps1.2.4.1.3 "><p id="p1465064720439"><a name="p1465064720439"></a><a name="p1465064720439"></a>系统事件</p>
+        </td>
+        </tr>
+        <tr id="row16651184714314"><td class="cellrowborder" valign="top" width="14.97%" headers="mcps1.2.4.1.1 "><p id="p116522047164313"><a name="p116522047164313"></a><a name="p116522047164313"></a>选择类型</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.43%" headers="mcps1.2.4.1.2 "><p id="p865519472438"><a name="p865519472438"></a><a name="p865519472438"></a>选择自定义创建。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.6%" headers="mcps1.2.4.1.3 "><p id="p1265894734314"><a name="p1265894734314"></a><a name="p1265894734314"></a>自定义创建</p>
+        </td>
+        </tr>
+        <tr id="row6659184717435"><td class="cellrowborder" valign="top" width="14.97%" headers="mcps1.2.4.1.1 "><p id="p566312479437"><a name="p566312479437"></a><a name="p566312479437"></a>事件来源</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.43%" headers="mcps1.2.4.1.2 "><p id="p9666114734313"><a name="p9666114734313"></a><a name="p9666114734313"></a>事件来源的云服务名称。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.6%" headers="mcps1.2.4.1.3 "><p id="p266944724311"><a name="p266944724311"></a><a name="p266944724311"></a>ECS</p>
+        </td>
+        </tr>
+        <tr id="row1967024718433"><td class="cellrowborder" valign="top" width="14.97%" headers="mcps1.2.4.1.1 "><p id="p1267374711438"><a name="p1267374711438"></a><a name="p1267374711438"></a>事件名称</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.43%" headers="mcps1.2.4.1.2 "><p id="p867824754316"><a name="p867824754316"></a><a name="p867824754316"></a>用户操作系统资源的动作，如登录，登出。</p>
+        <p id="p206801473435"><a name="p206801473435"></a><a name="p206801473435"></a>事件监控支持的操作事件请参见<a href="事件监控支持的操作事件说明.md">事件监控支持的操作事件说明</a>。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.6%" headers="mcps1.2.4.1.3 "><p id="p9683447164315"><a name="p9683447164315"></a><a name="p9683447164315"></a>Delete ECS</p>
+        </td>
+        </tr>
+        <tr id="row36841447164320"><td class="cellrowborder" valign="top" width="14.97%" headers="mcps1.2.4.1.1 "><p id="p5687947124316"><a name="p5687947124316"></a><a name="p5687947124316"></a>监控范围</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.43%" headers="mcps1.2.4.1.2 "><p id="p156901647184319"><a name="p156901647184319"></a><a name="p156901647184319"></a>创建事件监控针对的资源范围。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.6%" headers="mcps1.2.4.1.3 "><p id="p06921447134312"><a name="p06921447134312"></a><a name="p06921447134312"></a>全部资源</p>
+        </td>
+        </tr>
+        <tr id="row569424784317"><td class="cellrowborder" valign="top" width="14.97%" headers="mcps1.2.4.1.1 "><p id="p869818471431"><a name="p869818471431"></a><a name="p869818471431"></a>监控对象</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.43%" headers="mcps1.2.4.1.2 "><p id="p57001547124315"><a name="p57001547124315"></a><a name="p57001547124315"></a>当选择指定资源时需配置该参数。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.6%" headers="mcps1.2.4.1.3 "><p id="p1870464754312"><a name="p1870464754312"></a><a name="p1870464754312"></a>-</p>
+        </td>
+        </tr>
+        <tr id="row19705144712437"><td class="cellrowborder" valign="top" width="14.97%" headers="mcps1.2.4.1.1 "><p id="p13709194764313"><a name="p13709194764313"></a><a name="p13709194764313"></a>触发方式</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.43%" headers="mcps1.2.4.1.2 "><p id="p27101947144316"><a name="p27101947144316"></a><a name="p27101947144316"></a>用户可根据该操作的严重程度选择立即触发或累计触发。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.6%" headers="mcps1.2.4.1.3 "><p id="p27141547124316"><a name="p27141547124316"></a><a name="p27141547124316"></a>立即触发</p>
+        </td>
+        </tr>
+        <tr id="row19715147164312"><td class="cellrowborder" valign="top" width="14.97%" headers="mcps1.2.4.1.1 "><p id="p18719124710437"><a name="p18719124710437"></a><a name="p18719124710437"></a>告警级别</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.43%" headers="mcps1.2.4.1.2 "><p id="p27215475432"><a name="p27215475432"></a><a name="p27215475432"></a>根据告警的严重程度不同等级，可选择紧急、重要、次要、提示。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.6%" headers="mcps1.2.4.1.3 "><p id="p872514794310"><a name="p872514794310"></a><a name="p872514794310"></a>重要</p>
+        </td>
+        </tr>
+        </tbody>
+        </table>
+
+    3.  根据界面提示，配置告警通知参数。
+
+        **图 3**  配置告警通知<a name="fig458094616420"></a>  
+        ![](figures/配置告警通知-7.png "配置告警通知-7")
+
+        **表 3**  配置告警通知
+
+        <a name="table54161352427"></a>
+        <table><thead align="left"><tr id="row13415173554216"><th class="cellrowborder" valign="top" width="14.970000000000002%" id="mcps1.2.4.1.1"><p id="p174151835174212"><a name="p174151835174212"></a><a name="p174151835174212"></a>参数</p>
+        </th>
+        <th class="cellrowborder" valign="top" width="64.35000000000001%" id="mcps1.2.4.1.2"><p id="p13415123594216"><a name="p13415123594216"></a><a name="p13415123594216"></a>参数说明</p>
+        </th>
+        <th class="cellrowborder" valign="top" width="20.680000000000003%" id="mcps1.2.4.1.3"><p id="p1341515350422"><a name="p1341515350422"></a><a name="p1341515350422"></a>取值样例</p>
+        </th>
+        </tr>
+        </thead>
+        <tbody><tr id="row3415103514420"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1741553594216"><a name="p1741553594216"></a><a name="p1741553594216"></a>发送通知</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="64.35000000000001%" headers="mcps1.2.4.1.2 "><p id="p1641523534216"><a name="p1641523534216"></a><a name="p1641523534216"></a>配置是否发送邮件、短信、HTTP和HTTPS通知用户。</p>
+        <p id="p941583511426"><a name="p941583511426"></a><a name="p941583511426"></a>选择“是”（推荐选择），会发送通知；选择“否”，不会发送通知。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="20.680000000000003%" headers="mcps1.2.4.1.3 "><p id="p74151335184220"><a name="p74151335184220"></a><a name="p74151335184220"></a>是</p>
+        </td>
+        </tr>
+        <tr id="row18415153564213"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1241513574211"><a name="p1241513574211"></a><a name="p1241513574211"></a>生效时间</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="64.35000000000001%" headers="mcps1.2.4.1.2 "><p id="p11415123518423"><a name="p11415123518423"></a><a name="p11415123518423"></a>该告警规则仅在生效时间内发送通知消息。</p>
+        <p id="p44151435144210"><a name="p44151435144210"></a><a name="p44151435144210"></a>如生效时间为00:00-8:00，则该告警规则仅在00:00-8:00发送通知消息。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="20.680000000000003%" headers="mcps1.2.4.1.3 "><p id="p741543516421"><a name="p741543516421"></a><a name="p741543516421"></a>-</p>
+        </td>
+        </tr>
+        <tr id="row164156354426"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1441533517421"><a name="p1441533517421"></a><a name="p1441533517421"></a>主题通知</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="64.35000000000001%" headers="mcps1.2.4.1.2 "><p id="p144152035194218"><a name="p144152035194218"></a><a name="p144152035194218"></a>需要发送告警通知的主题名称。</p>
+        <p id="p74151035134218"><a name="p74151035134218"></a><a name="p74151035134218"></a>当发送通知选择“是”时，需要选择已有的主题名称，若此处没有需要的主题则需先创建主题，该功能会调用消息通知服务（SMN），创建主题请参见《消息通知服务用户指南》。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="20.680000000000003%" headers="mcps1.2.4.1.3 "><p id="p2415163514213"><a name="p2415163514213"></a><a name="p2415163514213"></a>-</p>
+        </td>
+        </tr>
+        <tr id="row1416153504210"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p0415235174219"><a name="p0415235174219"></a><a name="p0415235174219"></a>触发条件</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="64.35000000000001%" headers="mcps1.2.4.1.2 "><p id="p141617354423"><a name="p141617354423"></a><a name="p141617354423"></a>可以选择“出现告警”、“恢复正常两种状态，作为触发告警通知的条件。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="20.680000000000003%" headers="mcps1.2.4.1.3 "><p id="p541653518424"><a name="p541653518424"></a><a name="p541653518424"></a>-</p>
+        </td>
+        </tr>
+        </tbody>
+        </table>
+
+    4.  配置完成后，单击“立即创建”，完成告警规则的创建。
 
 
