--- a/cn.zh-cn/用户指南/创建告警规则.md
+++ b/cn.zh-cn/用户指南/创建告警规则.md
@@ -12,121 +12,173 @@
 4.  单击页面左侧的“主机监控”，进入主机监控页面。
 5.  单击ECS或BMS主机所在栏右侧的“更多”按钮，选择下拉出的“创建告警规则”。
 6.  在“创建告警规则”界面，根据界面提示配置参数。
-    1.  监控对象为当前的弹性云服务器，无需配置。
-    2.  选择监控指标，选择“自定义创建”，参照[表1](#table4534051437)完成参数配置。
+    1.  根据界面提示，配置规则信息参数。
 
-        **表 1**  配置参数
+        **图 1**  配置规则信息<a name="fig283216161388"></a>  
+        ![](figures/配置规则信息.png "配置规则信息")
 
-        <a name="table4534051437"></a>
-        <table><thead align="left"><tr id="row3530951333"><th class="cellrowborder" valign="top" width="17%" id="mcps1.2.4.1.1"><p id="p1530851938"><a name="p1530851938"></a><a name="p1530851938"></a>参数</p>
+        **表 1**  配置规则信息
+
+        <a name="table17694105411317"></a>
+        <table><thead align="left"><tr id="row18694135418312"><th class="cellrowborder" valign="top" width="14.97%" id="mcps1.2.4.1.1"><p id="p4694195463111"><a name="p4694195463111"></a><a name="p4694195463111"></a>参数</p>
         </th>
-        <th class="cellrowborder" valign="top" width="50%" id="mcps1.2.4.1.2"><p id="p1530551132"><a name="p1530551132"></a><a name="p1530551132"></a>参数说明</p>
+        <th class="cellrowborder" valign="top" width="62.96000000000001%" id="mcps1.2.4.1.2"><p id="p12694175417314"><a name="p12694175417314"></a><a name="p12694175417314"></a>参数说明</p>
         </th>
-        <th class="cellrowborder" valign="top" width="33%" id="mcps1.2.4.1.3"><p id="p1453016511319"><a name="p1453016511319"></a><a name="p1453016511319"></a>取值样例</p>
+        <th class="cellrowborder" valign="top" width="22.07%" id="mcps1.2.4.1.3"><p id="p156947547311"><a name="p156947547311"></a><a name="p156947547311"></a>取值样例</p>
         </th>
         </tr>
         </thead>
-        <tbody><tr id="row45306511317"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="p115301254316"><a name="p115301254316"></a><a name="p115301254316"></a>选择类型</p>
+        <tbody><tr id="row17694105423111"><td class="cellrowborder" valign="top" width="14.97%" headers="mcps1.2.4.1.1 "><p id="p7694854113110"><a name="p7694854113110"></a><a name="p7694854113110"></a>名称</p>
         </td>
-        <td class="cellrowborder" valign="top" width="50%" headers="mcps1.2.4.1.2 "><p id="p145301056319"><a name="p145301056319"></a><a name="p145301056319"></a>选择自定义创建。</p>
+        <td class="cellrowborder" valign="top" width="62.96000000000001%" headers="mcps1.2.4.1.2 "><p id="p469414543310"><a name="p469414543310"></a><a name="p469414543310"></a>系统会随机产生一个名称，用户也可以进行修改。</p>
         </td>
-        <td class="cellrowborder" valign="top" width="33%" headers="mcps1.2.4.1.3 "><p id="p105301251131"><a name="p105301251131"></a><a name="p105301251131"></a>自定义创建</p>
-        </td>
-        </tr>
-        <tr id="row45317514311"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="p125302519314"><a name="p125302519314"></a><a name="p125302519314"></a>监控指标</p>
-        </td>
-        <td class="cellrowborder" valign="top" width="50%" headers="mcps1.2.4.1.2 "><p id="p102320581117"><a name="p102320581117"></a><a name="p102320581117"></a>基础监控指标请参见<a href="弹性云服务器的监控指标.md">弹性云服务器的监控指标</a>。</p>
-        <p id="p147161464587"><a name="p147161464587"></a><a name="p147161464587"></a>细颗粒度监控指标请参见<a href="弹性云服务器中操作系统监控的监控指标.md">弹性云服务器中操作系统监控的监控指标</a>。</p>
-        </td>
-        <td class="cellrowborder" valign="top" width="33%" headers="mcps1.2.4.1.3 "><p id="p7531105036"><a name="p7531105036"></a><a name="p7531105036"></a>-</p>
+        <td class="cellrowborder" valign="top" width="22.07%" headers="mcps1.2.4.1.3 "><p id="p1069495418317"><a name="p1069495418317"></a><a name="p1069495418317"></a>alarm-b6al</p>
         </td>
         </tr>
-        <tr id="row1915291221512"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="p1815311261513"><a name="p1815311261513"></a><a name="p1815311261513"></a>挂载点</p>
+        <tr id="row13694165413316"><td class="cellrowborder" valign="top" width="14.97%" headers="mcps1.2.4.1.1 "><p id="p6694115493116"><a name="p6694115493116"></a><a name="p6694115493116"></a>描述</p>
         </td>
-        <td class="cellrowborder" valign="top" width="50%" headers="mcps1.2.4.1.2 "><p id="p1315371217159"><a name="p1315371217159"></a><a name="p1315371217159"></a>当监控指标为细颗粒度的磁盘类监控指标时需配置该参数。</p>
+        <td class="cellrowborder" valign="top" width="62.96000000000001%" headers="mcps1.2.4.1.2 "><p id="p0694954103120"><a name="p0694954103120"></a><a name="p0694954103120"></a>告警规则描述（此参数非必填项）。</p>
         </td>
-        <td class="cellrowborder" valign="top" width="33%" headers="mcps1.2.4.1.3 "><p id="p6153112191516"><a name="p6153112191516"></a><a name="p6153112191516"></a>/</p>
-        </td>
-        </tr>
-        <tr id="row71712813234"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="p9435204373719"><a name="p9435204373719"></a><a name="p9435204373719"></a>告警策略</p>
-        </td>
-        <td class="cellrowborder" valign="top" width="50%" headers="mcps1.2.4.1.2 "><p id="p2043584343715"><a name="p2043584343715"></a><a name="p2043584343715"></a>触发告警规则的告警策略。</p>
-        <p id="p043712111488"><a name="p043712111488"></a><a name="p043712111488"></a>例如：监控周期为5分钟，连续三个周期原始值≥80%</p>
-        </td>
-        <td class="cellrowborder" valign="top" width="33%" headers="mcps1.2.4.1.3 "><p id="p54357432379"><a name="p54357432379"></a><a name="p54357432379"></a>-</p>
-        </td>
-        </tr>
-        <tr id="row149545815518"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="p1195420845111"><a name="p1195420845111"></a><a name="p1195420845111"></a>告警级别</p>
-        </td>
-        <td class="cellrowborder" valign="top" width="50%" headers="mcps1.2.4.1.2 "><p id="p17956884516"><a name="p17956884516"></a><a name="p17956884516"></a>根据告警的严重程度不同等级，可选择紧急、重要、次要、提示。</p>
-        </td>
-        <td class="cellrowborder" valign="top" width="33%" headers="mcps1.2.4.1.3 "><p id="p8956389517"><a name="p8956389517"></a><a name="p8956389517"></a>重要</p>
-        </td>
-        </tr>
-        <tr id="row14533185337"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="p05331451736"><a name="p05331451736"></a><a name="p05331451736"></a>发送通知</p>
-        </td>
-        <td class="cellrowborder" valign="top" width="50%" headers="mcps1.2.4.1.2 "><p id="p25331957319"><a name="p25331957319"></a><a name="p25331957319"></a>配置是否发送邮件、短信、HTTP和HTTPS通知用户。</p>
-        <p id="p1118415399143"><a name="p1118415399143"></a><a name="p1118415399143"></a>选择“是”（推荐选择），会发送通知；选择“否”，不会发送通知。</p>
-        </td>
-        <td class="cellrowborder" valign="top" width="33%" headers="mcps1.2.4.1.3 "><p id="p10533353313"><a name="p10533353313"></a><a name="p10533353313"></a>是</p>
-        </td>
-        </tr>
-        <tr id="row673731692516"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="p165875094913"><a name="p165875094913"></a><a name="p165875094913"></a>生效时间</p>
-        </td>
-        <td class="cellrowborder" valign="top" width="50%" headers="mcps1.2.4.1.2 "><p id="p7658165024912"><a name="p7658165024912"></a><a name="p7658165024912"></a>该告警规则仅在生效时间内发送通知消息。</p>
-        <p id="p52121744532"><a name="p52121744532"></a><a name="p52121744532"></a>如生效时间为00:00-8:00，则该告警规则仅在00:00-8:00发送通知消息。</p>
-        </td>
-        <td class="cellrowborder" valign="top" width="33%" headers="mcps1.2.4.1.3 "><p id="p96581505499"><a name="p96581505499"></a><a name="p96581505499"></a>-</p>
-        </td>
-        </tr>
-        <tr id="row115341653311"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="p65331051036"><a name="p65331051036"></a><a name="p65331051036"></a>主题通知</p>
-        </td>
-        <td class="cellrowborder" valign="top" width="50%" headers="mcps1.2.4.1.2 "><p id="p195331052311"><a name="p195331052311"></a><a name="p195331052311"></a>需要发送告警通知的主题名称。</p>
-        <p id="p45331951433"><a name="p45331951433"></a><a name="p45331951433"></a>当发送通知选择“是”时，需要选择已有的主题名称，若此处没有需要的主题则需先创建主题，该功能会调用消息通知服务（SMN），创建主题请参见《消息通知服务用户指南》。</p>
-        </td>
-        <td class="cellrowborder" valign="top" width="33%" headers="mcps1.2.4.1.3 "><p id="p5534552312"><a name="p5534552312"></a><a name="p5534552312"></a>-</p>
-        </td>
-        </tr>
-        <tr id="row17534558319"><td class="cellrowborder" valign="top" width="17%" headers="mcps1.2.4.1.1 "><p id="p1953418515316"><a name="p1953418515316"></a><a name="p1953418515316"></a>触发条件</p>
-        </td>
-        <td class="cellrowborder" valign="top" width="50%" headers="mcps1.2.4.1.2 "><p id="p353475732"><a name="p353475732"></a><a name="p353475732"></a>可以选择“出现告警”、“恢复正常”两种状态，作为触发告警通知的条件。</p>
-        </td>
-        <td class="cellrowborder" valign="top" width="33%" headers="mcps1.2.4.1.3 "><p id="p1534455310"><a name="p1534455310"></a><a name="p1534455310"></a>-</p>
+        <td class="cellrowborder" valign="top" width="22.07%" headers="mcps1.2.4.1.3 "><p id="p169465412315"><a name="p169465412315"></a><a name="p169465412315"></a>-</p>
         </td>
         </tr>
         </tbody>
         </table>
 
-    3.  规则信息，根据界面提示配置参数，如[表2](#table10391431667)所示。配置完成后，单击“创建”，完成创建告警规则。
+    2.  选择监控对象，配置告警内容参数。
 
-        **表 2**  配置参数
+        **图 2**  配置告警内容<a name="fig1674320252422"></a>  
+        ![](figures/配置告警内容.png "配置告警内容")
 
-        <a name="table10391431667"></a>
-        <table><thead align="left"><tr id="row133921438611"><th class="cellrowborder" valign="top" width="16.42%" id="mcps1.2.4.1.1"><p id="p0393231567"><a name="p0393231567"></a><a name="p0393231567"></a>参数</p>
+        **表 2**  配置告警内容
+
+        <a name="table1838512257346"></a>
+        <table><thead align="left"><tr id="row1139752563410"><th class="cellrowborder" valign="top" width="14.970000000000002%" id="mcps1.2.4.1.1"><p id="p47131055123411"><a name="p47131055123411"></a><a name="p47131055123411"></a>参数</p>
         </th>
-        <th class="cellrowborder" valign="top" width="50.62%" id="mcps1.2.4.1.2"><p id="p1393631469"><a name="p1393631469"></a><a name="p1393631469"></a>参数说明</p>
+        <th class="cellrowborder" valign="top" width="63.12000000000001%" id="mcps1.2.4.1.2"><p id="p1403152510348"><a name="p1403152510348"></a><a name="p1403152510348"></a>参数说明</p>
         </th>
-        <th class="cellrowborder" valign="top" width="32.96%" id="mcps1.2.4.1.3"><p id="p1839353567"><a name="p1839353567"></a><a name="p1839353567"></a>取值样例</p>
+        <th class="cellrowborder" valign="top" width="21.91%" id="mcps1.2.4.1.3"><p id="p14051525103417"><a name="p14051525103417"></a><a name="p14051525103417"></a>取值样例</p>
         </th>
         </tr>
         </thead>
-        <tbody><tr id="row3396331612"><td class="cellrowborder" valign="top" width="16.42%" headers="mcps1.2.4.1.1 "><p id="p63961231563"><a name="p63961231563"></a><a name="p63961231563"></a>名称</p>
+        <tbody><tr id="row742952516349"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p11436102573419"><a name="p11436102573419"></a><a name="p11436102573419"></a>资源类型</p>
         </td>
-        <td class="cellrowborder" valign="top" width="50.62%" headers="mcps1.2.4.1.2 "><p id="p839633762"><a name="p839633762"></a><a name="p839633762"></a>系统会随机产生一个名称，用户也可以进行修改。</p>
+        <td class="cellrowborder" valign="top" width="63.12000000000001%" headers="mcps1.2.4.1.2 "><p id="p84399253342"><a name="p84399253342"></a><a name="p84399253342"></a>配置告警规则监控的服务名称。</p>
         </td>
-        <td class="cellrowborder" valign="top" width="32.96%" headers="mcps1.2.4.1.3 "><p id="p133967310614"><a name="p133967310614"></a><a name="p133967310614"></a>alarm-b6al</p>
+        <td class="cellrowborder" valign="top" width="21.91%" headers="mcps1.2.4.1.3 "><p id="p1744032512348"><a name="p1744032512348"></a><a name="p1744032512348"></a>弹性云服务器</p>
         </td>
         </tr>
-        <tr id="row1739693467"><td class="cellrowborder" valign="top" width="16.42%" headers="mcps1.2.4.1.1 "><p id="p6396938611"><a name="p6396938611"></a><a name="p6396938611"></a>描述</p>
+        <tr id="row1244342513412"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p144512510349"><a name="p144512510349"></a><a name="p144512510349"></a>维度</p>
         </td>
-        <td class="cellrowborder" valign="top" width="50.62%" headers="mcps1.2.4.1.2 "><p id="p1739653463"><a name="p1739653463"></a><a name="p1739653463"></a>告警规则描述（此参数非必填项）。</p>
+        <td class="cellrowborder" valign="top" width="63.12000000000001%" headers="mcps1.2.4.1.2 "><p id="p94474258343"><a name="p94474258343"></a><a name="p94474258343"></a>用于指定告警规则对应指标的维度名称</p>
         </td>
-        <td class="cellrowborder" valign="top" width="32.96%" headers="mcps1.2.4.1.3 "><p id="p13979316618"><a name="p13979316618"></a><a name="p13979316618"></a>-</p>
+        <td class="cellrowborder" valign="top" width="21.91%" headers="mcps1.2.4.1.3 "><p id="p164505254348"><a name="p164505254348"></a><a name="p164505254348"></a>云服务器</p>
+        </td>
+        </tr>
+        <tr id="row84511325173416"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1645313256343"><a name="p1645313256343"></a><a name="p1645313256343"></a>监控范围</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.12000000000001%" headers="mcps1.2.4.1.2 "><p id="p194561925183411"><a name="p194561925183411"></a><a name="p194561925183411"></a>告警规则适用的资源范围。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.91%" headers="mcps1.2.4.1.3 "><p id="p13459825193410"><a name="p13459825193410"></a><a name="p13459825193410"></a>指定资源</p>
+        </td>
+        </tr>
+        <tr id="row13462172515346"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p646342511342"><a name="p646342511342"></a><a name="p646342511342"></a>监控对象</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.12000000000001%" headers="mcps1.2.4.1.2 "><p id="p1746792543415"><a name="p1746792543415"></a><a name="p1746792543415"></a>监控对象为当前选择的弹性云服务器，无需配置。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.91%" headers="mcps1.2.4.1.3 "><p id="p4471825123412"><a name="p4471825123412"></a><a name="p4471825123412"></a>-</p>
+        </td>
+        </tr>
+        <tr id="row194731325183416"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p647502563411"><a name="p647502563411"></a><a name="p647502563411"></a>选择类型</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.12000000000001%" headers="mcps1.2.4.1.2 "><p id="p124781251343"><a name="p124781251343"></a><a name="p124781251343"></a>根据需要可选择从模板导入或自定义创建。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.91%" headers="mcps1.2.4.1.3 "><p id="p248014255345"><a name="p248014255345"></a><a name="p248014255345"></a>自定义创建</p>
+        </td>
+        </tr>
+        <tr id="row74821125113418"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p16484172514343"><a name="p16484172514343"></a><a name="p16484172514343"></a>模板</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.12000000000001%" headers="mcps1.2.4.1.2 "><p id="p1948712518346"><a name="p1948712518346"></a><a name="p1948712518346"></a>选择需要导入的模板。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.91%" headers="mcps1.2.4.1.3 "><p id="p1748919255347"><a name="p1748919255347"></a><a name="p1748919255347"></a>-</p>
+        </td>
+        </tr>
+        <tr id="row649114256342"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1349452503414"><a name="p1349452503414"></a><a name="p1349452503414"></a>告警策略</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.12000000000001%" headers="mcps1.2.4.1.2 "><p id="p449616252341"><a name="p449616252341"></a><a name="p449616252341"></a>触发告警规则的告警策略。</p>
+        <p id="p1149717250346"><a name="p1149717250346"></a><a name="p1149717250346"></a>例如：CPU使用率，监控周期为5分钟，连续三个周期原始值≥80%</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.91%" headers="mcps1.2.4.1.3 "><p id="p18500122517346"><a name="p18500122517346"></a><a name="p18500122517346"></a>-</p>
+        </td>
+        </tr>
+        <tr id="row6500102573410"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p250482511349"><a name="p250482511349"></a><a name="p250482511349"></a>挂载点</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.12000000000001%" headers="mcps1.2.4.1.2 "><p id="p25060258344"><a name="p25060258344"></a><a name="p25060258344"></a>当监控指标为细颗粒度的磁盘类监控指标时需配置该参数。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.91%" headers="mcps1.2.4.1.3 "><p id="p195101225163412"><a name="p195101225163412"></a><a name="p195101225163412"></a>/</p>
+        </td>
+        </tr>
+        <tr id="row1051172563420"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1951582520341"><a name="p1951582520341"></a><a name="p1951582520341"></a>告警级别</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="63.12000000000001%" headers="mcps1.2.4.1.2 "><p id="p35162258340"><a name="p35162258340"></a><a name="p35162258340"></a>根据告警的严重程度不同等级，可选择紧急、重要、次要、提示。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="21.91%" headers="mcps1.2.4.1.3 "><p id="p125211258343"><a name="p125211258343"></a><a name="p125211258343"></a>重要</p>
         </td>
         </tr>
         </tbody>
         </table>
 
+    3.  根据界面提示，配置告警通知参数。
+
+        **图 3**  配置告警通知<a name="fig458094616420"></a>  
+        ![](figures/配置告警通知.png "配置告警通知")
+
+        **表 3**  配置告警通知
+
+        <a name="table54161352427"></a>
+        <table><thead align="left"><tr id="row13415173554216"><th class="cellrowborder" valign="top" width="14.970000000000002%" id="mcps1.2.4.1.1"><p id="p174151835174212"><a name="p174151835174212"></a><a name="p174151835174212"></a>参数</p>
+        </th>
+        <th class="cellrowborder" valign="top" width="64.35000000000001%" id="mcps1.2.4.1.2"><p id="p13415123594216"><a name="p13415123594216"></a><a name="p13415123594216"></a>参数说明</p>
+        </th>
+        <th class="cellrowborder" valign="top" width="20.680000000000003%" id="mcps1.2.4.1.3"><p id="p1341515350422"><a name="p1341515350422"></a><a name="p1341515350422"></a>取值样例</p>
+        </th>
+        </tr>
+        </thead>
+        <tbody><tr id="row3415103514420"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1741553594216"><a name="p1741553594216"></a><a name="p1741553594216"></a>发送通知</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="64.35000000000001%" headers="mcps1.2.4.1.2 "><p id="p1641523534216"><a name="p1641523534216"></a><a name="p1641523534216"></a>配置是否发送邮件、短信、HTTP和HTTPS通知用户。</p>
+        <p id="p941583511426"><a name="p941583511426"></a><a name="p941583511426"></a>选择“是”（推荐选择），会发送通知；选择“否”，不会发送通知。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="20.680000000000003%" headers="mcps1.2.4.1.3 "><p id="p74151335184220"><a name="p74151335184220"></a><a name="p74151335184220"></a>是</p>
+        </td>
+        </tr>
+        <tr id="row18415153564213"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1241513574211"><a name="p1241513574211"></a><a name="p1241513574211"></a>生效时间</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="64.35000000000001%" headers="mcps1.2.4.1.2 "><p id="p11415123518423"><a name="p11415123518423"></a><a name="p11415123518423"></a>该告警规则仅在生效时间内发送通知消息。</p>
+        <p id="p44151435144210"><a name="p44151435144210"></a><a name="p44151435144210"></a>如生效时间为00:00-8:00，则该告警规则仅在00:00-8:00发送通知消息。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="20.680000000000003%" headers="mcps1.2.4.1.3 "><p id="p741543516421"><a name="p741543516421"></a><a name="p741543516421"></a>-</p>
+        </td>
+        </tr>
+        <tr id="row164156354426"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1441533517421"><a name="p1441533517421"></a><a name="p1441533517421"></a>主题通知</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="64.35000000000001%" headers="mcps1.2.4.1.2 "><p id="p144152035194218"><a name="p144152035194218"></a><a name="p144152035194218"></a>需要发送告警通知的主题名称。</p>
+        <p id="p74151035134218"><a name="p74151035134218"></a><a name="p74151035134218"></a>当发送通知选择“是”时，需要选择已有的主题名称，若此处没有需要的主题则需先创建主题，该功能会调用消息通知服务（SMN），创建主题请参见《消息通知服务用户指南》。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="20.680000000000003%" headers="mcps1.2.4.1.3 "><p id="p2415163514213"><a name="p2415163514213"></a><a name="p2415163514213"></a>-</p>
+        </td>
+        </tr>
+        <tr id="row1416153504210"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p0415235174219"><a name="p0415235174219"></a><a name="p0415235174219"></a>触发条件</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="64.35000000000001%" headers="mcps1.2.4.1.2 "><p id="p141617354423"><a name="p141617354423"></a><a name="p141617354423"></a>可以选择“出现告警”、“恢复正常两种状态，作为触发告警通知的条件。</p>
+        </td>
+        <td class="cellrowborder" valign="top" width="20.680000000000003%" headers="mcps1.2.4.1.3 "><p id="p541653518424"><a name="p541653518424"></a><a name="p541653518424"></a>-</p>
+        </td>
+        </tr>
+        </tbody>
+        </table>
+
+    4.  配置完成后，单击“立即创建”，完成告警规则的创建。
 
 
 告警规则添加完成后，当监控指标触发设定的阈值时，云监控会在第一时间通过消息通知服务实时告知您云上资源异常，以免因此造成业务损失。
