--- a/cn.zh-cn/用户指南/弹性云服务器中操作系统监控的监控指标.md
+++ b/cn.zh-cn/用户指南/弹性云服务器中操作系统监控的监控指标.md
@@ -408,9 +408,9 @@
 <p id="p121031882513"><a name="p121031882513"></a><a name="p121031882513"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
 </div></div>
 </td>
-<td class="cellrowborder" rowspan="7" valign="top" width="24%" headers="mcps1.2.6.1.5 "><p id="a3cd04b009823479f98c9dc51ac23e54f"><a name="a3cd04b009823479f98c9dc51ac23e54f"></a><a name="a3cd04b009823479f98c9dc51ac23e54f"></a>测量对象：云服务器</p>
-<div class="note" id="n9baa6cb969394b8b94090db1d866582f"><a name="n9baa6cb969394b8b94090db1d866582f"></a><a name="n9baa6cb969394b8b94090db1d866582f"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="zh-cn_topic_0083516942_p187714544284"><a name="zh-cn_topic_0083516942_p187714544284"></a><a name="zh-cn_topic_0083516942_p187714544284"></a>使用WMI中Win32_PerfFormattedData_PerfDisk_LogicalDisk对象获取磁盘I/O数据。</p>
-<p id="p1316511211617"><a name="p1316511211617"></a><a name="p1316511211617"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
+<td class="cellrowborder" rowspan="4" valign="top" width="24%" headers="mcps1.2.6.1.5 "><p id="a3cd04b009823479f98c9dc51ac23e54f"><a name="a3cd04b009823479f98c9dc51ac23e54f"></a><a name="a3cd04b009823479f98c9dc51ac23e54f"></a>测量对象：云服务器</p>
+<div class="note" id="n9baa6cb969394b8b94090db1d866582f"><a name="n9baa6cb969394b8b94090db1d866582f"></a><a name="n9baa6cb969394b8b94090db1d866582f"></a><span class="notetitle"> 说明： </span><div class="notebody"><a name="ul1043313503610"></a><a name="ul1043313503610"></a><ul id="ul1043313503610"><li>使用WMI中Win32_PerfFormattedData_PerfDisk_LogicalDisk对象获取磁盘I/O数据。</li><li>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</li></ul>
+<a name="ul1979713477619"></a><a name="ul1979713477619"></a><ul id="ul1979713477619"><li>高CPU情况下存在获取超时的现象，会导致无法获取监控数据。</li></ul>
 </div></div>
 </td>
 </tr>
@@ -453,17 +453,19 @@
 </div></div>
 </td>
 </tr>
-<tr id="zh-cn_topic_0083516942_row3526538307"><td class="cellrowborder" valign="top" headers="mcps1.2.6.1.1 "><p id="zh-cn_topic_0083516942_p1888124844819"><a name="zh-cn_topic_0083516942_p1888124844819"></a><a name="zh-cn_topic_0083516942_p1888124844819"></a>（Agent）读操作平均耗时</p>
+<tr id="zh-cn_topic_0083516942_row3526538307"><td class="cellrowborder" valign="top" width="12%" headers="mcps1.2.6.1.1 "><p id="zh-cn_topic_0083516942_p1888124844819"><a name="zh-cn_topic_0083516942_p1888124844819"></a><a name="zh-cn_topic_0083516942_p1888124844819"></a>（Agent）读操作平均耗时</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0083516942_p15890164812481"><a name="zh-cn_topic_0083516942_p15890164812481"></a><a name="zh-cn_topic_0083516942_p15890164812481"></a>该指标用于统计测量对象磁盘读操作平均耗时。</p>
+<td class="cellrowborder" valign="top" width="25%" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0083516942_p15890164812481"><a name="zh-cn_topic_0083516942_p15890164812481"></a><a name="zh-cn_topic_0083516942_p15890164812481"></a>该指标用于统计测量对象磁盘读操作平均耗时。</p>
 <p id="p3665195675519"><a name="p3665195675519"></a><a name="p3665195675519"></a>单位：ms/count</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0083516942_p761943410503"><a name="zh-cn_topic_0083516942_p761943410503"></a><a name="zh-cn_topic_0083516942_p761943410503"></a>≥ 0 ms/count</p>
+<td class="cellrowborder" valign="top" width="8%" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0083516942_p761943410503"><a name="zh-cn_topic_0083516942_p761943410503"></a><a name="zh-cn_topic_0083516942_p761943410503"></a>≥ 0 ms/count</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0083516942_p942165217407"><a name="zh-cn_topic_0083516942_p942165217407"></a><a name="zh-cn_topic_0083516942_p942165217407"></a>测量对象：云服务器</p>
+<td class="cellrowborder" valign="top" width="31%" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0083516942_p942165217407"><a name="zh-cn_topic_0083516942_p942165217407"></a><a name="zh-cn_topic_0083516942_p942165217407"></a>测量对象：云服务器</p>
 <div class="note" id="zh-cn_topic_0083516942_note44242528405"><a name="zh-cn_topic_0083516942_note44242528405"></a><a name="zh-cn_topic_0083516942_note44242528405"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="zh-cn_topic_0083516942_p1943611520401"><a name="zh-cn_topic_0083516942_p1943611520401"></a><a name="zh-cn_topic_0083516942_p1943611520401"></a>通过计算10s间隔/proc/diskstats中对应设备第七列数据的变化得出磁盘读操作平均耗时。</p>
 <p id="p13476152412513"><a name="p13476152412513"></a><a name="p13476152412513"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
 </div></div>
+</td>
+<td class="cellrowborder" rowspan="7" valign="top" width="24%" headers="mcps1.2.6.1.5 "><p id="p16746201716417"><a name="p16746201716417"></a><a name="p16746201716417"></a>暂不支持</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0083516942_row1271463304"><td class="cellrowborder" valign="top" headers="mcps1.2.6.1.1 "><p id="zh-cn_topic_0083516942_p48901848154819"><a name="zh-cn_topic_0083516942_p48901848154819"></a><a name="zh-cn_topic_0083516942_p48901848154819"></a>（Agent）写操作平均耗时</p>
@@ -492,19 +494,17 @@
 </div></div>
 </td>
 </tr>
-<tr id="row1430742210414"><td class="cellrowborder" valign="top" width="12%" headers="mcps1.2.6.1.1 "><p id="p1222693718413"><a name="p1222693718413"></a><a name="p1222693718413"></a>（Agent）平均队列长度</p>
+<tr id="row1430742210414"><td class="cellrowborder" valign="top" headers="mcps1.2.6.1.1 "><p id="p1222693718413"><a name="p1222693718413"></a><a name="p1222693718413"></a>（Agent）平均队列长度</p>
 </td>
-<td class="cellrowborder" valign="top" width="25%" headers="mcps1.2.6.1.2 "><p id="p52311737154114"><a name="p52311737154114"></a><a name="p52311737154114"></a>该指标用于统计指定时间段内，平均等待完成的读取或写入操作请求的数量</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="p52311737154114"><a name="p52311737154114"></a><a name="p52311737154114"></a>该指标用于统计指定时间段内，平均等待完成的读取或写入操作请求的数量</p>
 <p id="p823173704120"><a name="p823173704120"></a><a name="p823173704120"></a>单位：个</p>
 </td>
-<td class="cellrowborder" valign="top" width="8%" headers="mcps1.2.6.1.3 "><p id="p823618378417"><a name="p823618378417"></a><a name="p823618378417"></a>≥ 0 Counts</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="p823618378417"><a name="p823618378417"></a><a name="p823618378417"></a>≥ 0 Counts</p>
 </td>
-<td class="cellrowborder" valign="top" width="31%" headers="mcps1.2.6.1.4 "><p id="p18244133717414"><a name="p18244133717414"></a><a name="p18244133717414"></a>测量对象：云服务器</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.4 "><p id="p18244133717414"><a name="p18244133717414"></a><a name="p18244133717414"></a>测量对象：云服务器</p>
 <div class="note" id="note48059114118"><a name="note48059114118"></a><a name="note48059114118"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p11809211915"><a name="p11809211915"></a><a name="p11809211915"></a>通过计算10s间隔/proc/diskstats中对应设备第十四列数据的变化得出磁盘平均队列长度。</p>
 <p id="p1813151012"><a name="p1813151012"></a><a name="p1813151012"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
 </div></div>
-</td>
-<td class="cellrowborder" rowspan="4" valign="top" width="24%" headers="mcps1.2.6.1.5 "><p id="p63701237134112"><a name="p63701237134112"></a><a name="p63701237134112"></a>暂不支持</p>
 </td>
 </tr>
 <tr id="row599132484116"><td class="cellrowborder" valign="top" headers="mcps1.2.6.1.1 "><p id="p6262173714416"><a name="p6262173714416"></a><a name="p6262173714416"></a>（Agent）平均写操作大小</p>
@@ -659,17 +659,17 @@
 <tr id="zh-cn_topic_0083516942_row1328934621110"><td class="cellrowborder" valign="top" headers="mcps1.2.6.1.1 "><p id="zh-cn_topic_0083516942_p14290124641113"><a name="zh-cn_topic_0083516942_p14290124641113"></a><a name="zh-cn_topic_0083516942_p14290124641113"></a>（Agent）网卡包接收速率</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0083516942_p4292134691112"><a name="zh-cn_topic_0083516942_p4292134691112"></a><a name="zh-cn_topic_0083516942_p4292134691112"></a>该指标用于统计测量对象网卡每秒接收的数据包数。</p>
-<p id="p1251716155915"><a name="p1251716155915"></a><a name="p1251716155915"></a>单位：Counts/s</p>
+<p id="p1251716155915"><a name="p1251716155915"></a><a name="p1251716155915"></a>单位：Count/s</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0083516942_p4297104616118"><a name="zh-cn_topic_0083516942_p4297104616118"></a><a name="zh-cn_topic_0083516942_p4297104616118"></a>≥ 0 Counts/s</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0083516942_p4297104616118"><a name="zh-cn_topic_0083516942_p4297104616118"></a><a name="zh-cn_topic_0083516942_p4297104616118"></a>≥ 0 counts/s</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0083516942_row0298154621113"><td class="cellrowborder" valign="top" headers="mcps1.2.6.1.1 "><p id="zh-cn_topic_0083516942_p829924613116"><a name="zh-cn_topic_0083516942_p829924613116"></a><a name="zh-cn_topic_0083516942_p829924613116"></a>（Agent）网卡包发送速率</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0083516942_p13300194619118"><a name="zh-cn_topic_0083516942_p13300194619118"></a><a name="zh-cn_topic_0083516942_p13300194619118"></a>该指标用于统计测量对象网卡每秒发送的数据包数。</p>
-<p id="p1365112114592"><a name="p1365112114592"></a><a name="p1365112114592"></a>单位：Counts/s</p>
+<p id="p1365112114592"><a name="p1365112114592"></a><a name="p1365112114592"></a>单位：Count/s</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0083516942_p030515462112"><a name="zh-cn_topic_0083516942_p030515462112"></a><a name="zh-cn_topic_0083516942_p030515462112"></a>≥ 0 Counts/s</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0083516942_p030515462112"><a name="zh-cn_topic_0083516942_p030515462112"></a><a name="zh-cn_topic_0083516942_p030515462112"></a>≥ 0 counts/s</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0083516942_row1513145363017"><td class="cellrowborder" valign="top" headers="mcps1.2.6.1.1 "><p id="zh-cn_topic_0083516942_p73131027132512"><a name="zh-cn_topic_0083516942_p73131027132512"></a><a name="zh-cn_topic_0083516942_p73131027132512"></a>（Agent）接收误包率</p>
