--- a/cn.zh-cn/用户指南/弹性伸缩的监控指标.md
+++ b/cn.zh-cn/用户指南/弹性伸缩的监控指标.md
@@ -35,7 +35,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="28.71%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0042018317_p30149174143433"><a name="zh-cn_topic_0042018317_p30149174143433"></a><a name="zh-cn_topic_0042018317_p30149174143433"></a>该指标用于统计弹性伸缩组中可用的云服务器数量。</p>
 </td>
-<td class="cellrowborder" valign="top" width="32.09%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0042018317_p20374254"><a name="zh-cn_topic_0042018317_p20374254"></a><a name="zh-cn_topic_0042018317_p20374254"></a>弹性伸缩组内健康状态为“正常”的云服务器数量之和。</p>
+<td class="cellrowborder" valign="top" width="32.09%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0042018317_p20374254"><a name="zh-cn_topic_0042018317_p20374254"></a><a name="zh-cn_topic_0042018317_p20374254"></a>弹性伸缩组内生命周期状态为“已启用”的云服务器数量之和。</p>
 </td>
 <td class="cellrowborder" valign="top" width="19.06%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0042018317_p55885300105619"><a name="zh-cn_topic_0042018317_p55885300105619"></a><a name="zh-cn_topic_0042018317_p55885300105619"></a>-</p>
 </td>
