--- a/cn.zh-cn/用户指南/弹性文件服务的监控指标.md
+++ b/cn.zh-cn/用户指南/弹性文件服务的监控指标.md
@@ -17,38 +17,38 @@
 </thead>
 <tbody><tr id="zh-cn_topic_0015479905_row8793315155224"><td class="cellrowborder" valign="top" width="18.81188118811881%" headers="mcps1.2.6.1.1 "><p id="zh-cn_topic_0015479905_p46428319155224"><a name="zh-cn_topic_0015479905_p46428319155224"></a><a name="zh-cn_topic_0015479905_p46428319155224"></a>读带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="36.633663366336634%" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0015479905_p2597514155224"><a name="zh-cn_topic_0015479905_p2597514155224"></a><a name="zh-cn_topic_0015479905_p2597514155224"></a>该指标用于统计测量对象在周期内的读数据量。</p>
+<td class="cellrowborder" valign="top" width="36.633663366336634%" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0015479905_p2597514155224"><a name="zh-cn_topic_0015479905_p2597514155224"></a><a name="zh-cn_topic_0015479905_p2597514155224"></a>该指标用于统计文件系统在周期内的读数据量。</p>
 <p id="zh-cn_topic_0015479905_p12321045172511"><a name="zh-cn_topic_0015479905_p12321045172511"></a><a name="zh-cn_topic_0015479905_p12321045172511"></a>单位：字节/秒</p>
 </td>
-<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0015479905_p9072094155224"><a name="zh-cn_topic_0015479905_p9072094155224"></a><a name="zh-cn_topic_0015479905_p9072094155224"></a>≥ 0 Byte/s</p>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.3 "><p id="p9072094155224"><a name="p9072094155224"></a><a name="p9072094155224"></a>≥ 0 bytes/s</p>
 </td>
 <td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0015479905_p63750977155224"><a name="zh-cn_topic_0015479905_p63750977155224"></a><a name="zh-cn_topic_0015479905_p63750977155224"></a>文件共享</p>
 </td>
-<td class="cellrowborder" valign="top" width="16.831683168316832%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0015479905_p179863501257"><a name="zh-cn_topic_0015479905_p179863501257"></a><a name="zh-cn_topic_0015479905_p179863501257"></a>1分钟</p>
+<td class="cellrowborder" valign="top" width="16.831683168316832%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0015479905_p179863501257"><a name="zh-cn_topic_0015479905_p179863501257"></a><a name="zh-cn_topic_0015479905_p179863501257"></a>4分钟</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0015479905_row36887889155224"><td class="cellrowborder" valign="top" width="18.81188118811881%" headers="mcps1.2.6.1.1 "><p id="zh-cn_topic_0015479905_p26880053155224"><a name="zh-cn_topic_0015479905_p26880053155224"></a><a name="zh-cn_topic_0015479905_p26880053155224"></a>写带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="36.633663366336634%" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0015479905_p29800678155224"><a name="zh-cn_topic_0015479905_p29800678155224"></a><a name="zh-cn_topic_0015479905_p29800678155224"></a>该指标用于统计测量对象在周期内的写数据量。</p>
+<td class="cellrowborder" valign="top" width="36.633663366336634%" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0015479905_p29800678155224"><a name="zh-cn_topic_0015479905_p29800678155224"></a><a name="zh-cn_topic_0015479905_p29800678155224"></a>该指标用于统计文件系统在周期内的写数据量。</p>
 <p id="zh-cn_topic_0015479905_p116183167264"><a name="zh-cn_topic_0015479905_p116183167264"></a><a name="zh-cn_topic_0015479905_p116183167264"></a>单位：字节/秒</p>
 </td>
-<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0015479905_p65044683155224"><a name="zh-cn_topic_0015479905_p65044683155224"></a><a name="zh-cn_topic_0015479905_p65044683155224"></a>≥ 0 Byte/s</p>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.3 "><p id="p05381407578"><a name="p05381407578"></a><a name="p05381407578"></a>≥ 0 bytes/s</p>
 </td>
 <td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0015479905_p34127948155224"><a name="zh-cn_topic_0015479905_p34127948155224"></a><a name="zh-cn_topic_0015479905_p34127948155224"></a>文件共享</p>
 </td>
-<td class="cellrowborder" valign="top" width="16.831683168316832%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0015479905_p1298695092517"><a name="zh-cn_topic_0015479905_p1298695092517"></a><a name="zh-cn_topic_0015479905_p1298695092517"></a>1分钟</p>
+<td class="cellrowborder" valign="top" width="16.831683168316832%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0015479905_p1298695092517"><a name="zh-cn_topic_0015479905_p1298695092517"></a><a name="zh-cn_topic_0015479905_p1298695092517"></a>4分钟</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0015479905_row38716083155224"><td class="cellrowborder" valign="top" width="18.81188118811881%" headers="mcps1.2.6.1.1 "><p id="zh-cn_topic_0015479905_p9176179155224"><a name="zh-cn_topic_0015479905_p9176179155224"></a><a name="zh-cn_topic_0015479905_p9176179155224"></a>读写带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="36.633663366336634%" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0015479905_p5073011155224"><a name="zh-cn_topic_0015479905_p5073011155224"></a><a name="zh-cn_topic_0015479905_p5073011155224"></a>该指标用于统计测量对象在周期内的读写数据量。</p>
+<td class="cellrowborder" valign="top" width="36.633663366336634%" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0015479905_p5073011155224"><a name="zh-cn_topic_0015479905_p5073011155224"></a><a name="zh-cn_topic_0015479905_p5073011155224"></a>该指标用于统计文件系统在周期内的读写数据量。</p>
 <p id="zh-cn_topic_0015479905_p199742414262"><a name="zh-cn_topic_0015479905_p199742414262"></a><a name="zh-cn_topic_0015479905_p199742414262"></a>单位：字节/秒</p>
 </td>
-<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0015479905_p8260756155224"><a name="zh-cn_topic_0015479905_p8260756155224"></a><a name="zh-cn_topic_0015479905_p8260756155224"></a>≥ 0 Byte/s</p>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.3 "><p id="p8260756155224"><a name="p8260756155224"></a><a name="p8260756155224"></a>≥ 0 bytes/s</p>
 </td>
 <td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0015479905_p65141501155224"><a name="zh-cn_topic_0015479905_p65141501155224"></a><a name="zh-cn_topic_0015479905_p65141501155224"></a>文件共享</p>
 </td>
-<td class="cellrowborder" valign="top" width="16.831683168316832%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0015479905_p4986155018257"><a name="zh-cn_topic_0015479905_p4986155018257"></a><a name="zh-cn_topic_0015479905_p4986155018257"></a>1分钟</p>
+<td class="cellrowborder" valign="top" width="16.831683168316832%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0015479905_p4986155018257"><a name="zh-cn_topic_0015479905_p4986155018257"></a><a name="zh-cn_topic_0015479905_p4986155018257"></a>4分钟</p>
 </td>
 </tr>
 </tbody>
