--- a/cn.zh-cn/用户指南/查看监控图表.md
+++ b/cn.zh-cn/用户指南/查看监控图表.md
@@ -8,7 +8,7 @@
 
 ## 前提条件<a name="section136556209557"></a>
 
-已完成Agent插件的安装。安装请参考[安装配置Agent（Linux）](安装配置Agent（Linux）.md)、[安装配置Agent（Windows）](安装配置Agent（Windows）.md)进行安装。
+已完成Agent插件的安装。安装请参考[安装配置Agent（Linux）](安装配置Agent（Linux）.md)、[安装配置Agent](安装配置Agent-1.md)进行安装。
 
 ## 操作步骤<a name="section19762433184840"></a>
 
