--- a/cn.zh-cn/用户指南/查看监控视图.md
+++ b/cn.zh-cn/用户指南/查看监控视图.md
@@ -1,6 +1,6 @@
 # 查看监控视图<a name="ZH-CN_TOPIC_0084572324"></a>
 
-监控视图添加完成后，您可以在监控面板页面查看该监控项近3小时内的监控走势图。系统提供固定时长和自定义时长两种方式查看近一个月的监控走势图，本节内容介绍如何查看更多时长的监控走势图。
+监控视图添加完成后，您可以在监控面板页面查看该监控项的监控走势图。系统提供固定时长和自定义时长两种方式查看近一个月的监控走势图，本节内容介绍如何查看更多时长的监控走势图。
 
 ## 操作步骤<a name="section35214515133120"></a>
 
@@ -21,10 +21,9 @@
 
 
 >![](public_sys-resources/icon-note.gif) **说明：**   
->-   自定义时长支持用户在最近一个星期内选择监控时间起点和终点，作为用户监控周期。  
->-   点击监控大图右侧的放大按钮后，可拖动鼠标选择自定义时间段。  
+>点击监控大图右侧的放大按钮后，可拖动鼠标选择自定义时间段。  
 
-在弹出的查看指标详情窗口下方，以列表形式默认显示各个对比指标监控项的简要说明项，用户可以单击某一个监控指标项关闭该监控项的走势图，再次单击该监控指标即可开启显示该指标走势。
+在弹出的查看指标详情窗口下方，鼠标悬浮到监控对象上后会显示各个对比指标监控项的简要说明项，用户可以单击某一个监控指标项关闭该监控项的走势图，再次单击该监控指标即可开启显示该指标走势。
 
 >![](public_sys-resources/icon-note.gif) **说明：**   
 >监控视图每60s自动刷新，需在监控面板界面开启自动刷新功能。  
